--- a/Rigveda/SamhitaPatha/Devanagari/Mandala/Format4/RVS-Devanagari-F4-M05.html
+++ b/Rigveda/SamhitaPatha/Devanagari/Mandala/Format4/RVS-Devanagari-F4-M05.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ऋग्वेद संहिता (मंडल: 05) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 10-Jan-2025]</h6>
+<br> [Last updated on: 13-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -2042,7 +2042,7 @@
 <td class='VargaStyle2'>तदृ॒तंपृ॑थिविबृ॒हच्छ्र॑वए॒षऋषी᳚णाम् |<span class='RishiDevChandas'>{आत्रेयो रातहव्यः | मित्रावरुणौ | अनुष्टुप्}</span><p>ज्र॒य॒सा॒नावरं᳚पृ॒थ्वति॑क्षरन्ति॒याम॑भिः॒(स्वाहा᳚) || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>आयद्वा᳚मीयचक्षसा॒मित्र॑व॒यंच॑सू॒रयः॑ |<span class='RishiDevChandas'>{आत्रेयो रातहव्यः | मित्रावरुणौ | अनुष्टुप्}</span><p>व्यचि॑ष्ठेबहु॒पाय्ये॒यते᳚महिस्व॒राज्ये॒(स्वाहा᳚) || 6 || </td>
+<td class='VargaStyle2'>आयद्‌वा᳚मीयचक्षसा॒मित्र॑व॒यंच॑सू॒रयः॑ |<span class='RishiDevChandas'>{आत्रेयो रातहव्यः | मित्रावरुणौ | अनुष्टुप्}</span><p>व्यचि॑ष्ठेबहु॒पाय्ये॒यते᳚महिस्व॒राज्ये॒(स्वाहा᳚) || 6 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[67] बळित्थादेवेति पंचर्चस्य सूक्तस्यात्रेयोयजतो मित्रावरुणावनुष्टुप् |<span class='MantraNumbering'>{मंडल:5, सूक्त:67}{अनुवाक:5, सूक्त:11}{अष्टक:4, अध्याय:4}</span>
@@ -2087,10 +2087,10 @@
 </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>त्रीरो᳚च॒नाव॑रुण॒त्रीँरु॒तद्यून्त्रीणि॑मित्रधारयथो॒रजां᳚सि |<span class='RishiDevChandas'>{आत्रेयो उरूचक्रिः | मित्रावरुणौ | त्रिष्टुप्}</span><p>वा॒वृ॒धा॒नाव॒मतिं᳚क्ष॒त्रिय॒स्यानु᳚व्र॒तंरक्ष॑माणावजु॒र्यम्(स्वाहा᳚) || 1 || <span class='MantraNumbering'>वर्ग:7</span></td>
+<td class='VargaStyle1'>त्रीरो᳚च॒नाव॑रुण॒त्रीँरु॒तद्यून्त्रीणि॑मित्रधारयथो॒रजां᳚सि |<span class='RishiDevChandas'>{आत्रेयो उरूचक्रिः | मित्रावरुणौ | त्रिष्टुप्}</span><p>वा॒वृ॒धा॒नाव॒मतिं᳚क्ष॒त्रिय॒स्याऽनु᳚व्र॒तंरक्ष॑माणावजु॒र्यम्(स्वाहा᳚) || 1 || <span class='MantraNumbering'>वर्ग:7</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>इरा᳚वतीर्वरुणधे॒नवो᳚वां॒मधु॑मद्वां॒सिन्ध॑वोमित्रदुह्रे |<span class='RishiDevChandas'>{आत्रेयो उरूचक्रिः | मित्रावरुणौ | त्रिष्टुप्}</span><p>त्रय॑स्तस्थुर्वृष॒भास॑स्तिसृ॒णांधि॒षणा᳚नांरेतो॒धाविद्यु॒मन्तः॒(स्वाहा᳚) || 2 || </td>
+<td class='VargaStyle1'>इरा᳚वतीर्वरुणधे॒नवो᳚वां॒मधु॑मद्वां॒सिन्ध॑वोमित्रदुह्रे |<span class='RishiDevChandas'>{आत्रेयो उरूचक्रिः | मित्रावरुणौ | त्रिष्टुप्}</span><p>त्रय॑स्तस्थुर्वृष॒भास॑स्तिसॄ॒णांधि॒षणा᳚नांरेतो॒धाविद्यु॒मन्तः॒(स्वाहा᳚) || 2 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>प्रा॒तर्दे॒वीमदि॑तिंजोहवीमिम॒ध्यंदि॑न॒उदि॑ता॒सूर्य॑स्य |<span class='RishiDevChandas'>{आत्रेयो उरूचक्रिः | मित्रावरुणौ | त्रिष्टुप्}</span><p>रा॒येमि॑त्रावरुणास॒र्वता॒तेळे᳚तो॒काय॒तन॑याय॒शंयोः(स्वाहा᳚) || 3 || </td>
@@ -2109,7 +2109,7 @@
 <td class='VargaStyle2'>तावां᳚स॒म्यग॑द्रुह्वा॒णेष॑मश्याम॒धाय॑से |<span class='RishiDevChandas'>{आत्रेयो उरूचक्रिः | मित्रावरुणौ | गायत्री}</span><p>व॒यंतेरु॑द्रास्याम॒(स्वाहा᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>पा॒तंनो᳚रुद्रापा॒युभि॑रु॒तत्रा᳚येथांसुत्रा॒त्रा |<span class='RishiDevChandas'>{आत्रेयो उरूचक्रिः | मित्रावरुणौ | गायत्री}</span><p>तु॒र्याम॒दस्यू᳚न्त॒नूभिः॒(स्वाहा᳚) || 3 || </td>
+<td class='VargaStyle2'>पा॒तंनो᳚रुद्रापा॒युभि॑रु॒तत्रा᳚येथांसुत्रा॒त्रा |<span class='RishiDevChandas'>{आत्रेयो उरूचक्रिः | मित्रावरुणौ | गायत्री}</span><p>तु॒र्याम॒दस्यू᳚न्‌त॒नूभिः॒(स्वाहा᳚) || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>माकस्या᳚द्भुतक्रतूय॒क्षंभु॑जेमात॒नूभिः॑ |<span class='RishiDevChandas'>{आत्रेयो उरूचक्रिः | मित्रावरुणौ | गायत्री}</span><p>माशेष॑सा॒मातन॑सा॒(स्वाहा᳚) || 4 || </td>
@@ -2145,41 +2145,41 @@
 </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>यद॒द्यस्थःप॑रा॒वति॒यद᳚र्वा॒वत्य॑श्विना |<span class='RishiDevChandas'>{आत्रेयः पौरः | अश्विनौ | अनुष्टुप्}</span><p>यद्वा᳚पु॒रूपु॑रुभुजा॒यद॒न्तरि॑क्ष॒आग॑त॒‌म्(स्वाहा᳚) || 1 || <span class='MantraNumbering'>वर्ग:11</span></td>
+<td class='VargaStyle1'>यद॒द्यस्थःप॑रा॒वति॒यद᳚र्वा॒वत्य॑श्विना |<span class='RishiDevChandas'>{आत्रेयः पौरः | अश्विनौ | अनुष्टुप्}</span><p>यद्‌वा᳚पु॒रूपु॑रुभुजा॒यद॒न्तरि॑क्ष॒आग॑त॒‌म्(स्वाहा᳚) || 1 || <span class='MantraNumbering'>वर्ग:11</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>इ॒हत्यापु॑रु॒भूत॑मापु॒रूदंसां᳚सि॒बिभ्र॑ता |<span class='RishiDevChandas'>{आत्रेयः पौरः | अश्विनौ | अनुष्टुप्}</span><p>व॒र॒स्याया॒म्यध्रि॑गूहु॒वेतु॒विष्ट॑माभु॒जे(स्वाहा᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ई॒र्मान्यद्वपु॑षे॒वपु॑श्च॒क्रंरथ॑स्ययेमथुः |<span class='RishiDevChandas'>{आत्रेयः पौरः | अश्विनौ | अनुष्टुप्}</span><p>पर्य॒न्यानाहु॑षायु॒गाम॒ह्नारजां᳚सिदीयथः॒(स्वाहा᳚) || 3 || </td>
+<td class='VargaStyle1'>ई॒र्मान्यद्‌वपु॑षे॒वपु॑श्च॒क्रंरथ॑स्ययेमथुः |<span class='RishiDevChandas'>{आत्रेयः पौरः | अश्विनौ | अनुष्टुप्}</span><p>पर्य॒न्यानाहु॑षायु॒गाम॒ह्नारजां᳚सिदीयथः॒(स्वाहा᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>तदू॒षुवा᳚मे॒नाकृ॒तंविश्वा॒यद्वा॒मनु॒ष्टवे᳚ |<span class='RishiDevChandas'>{आत्रेयः पौरः | अश्विनौ | अनुष्टुप्}</span><p>नाना᳚जा॒ताव॑रे॒पसा॒सम॒स्मेबन्धु॒मेय॑थुः॒(स्वाहा᳚) || 4 || </td>
+<td class='VargaStyle1'>तदू॒षुवा᳚मे॒नाकृ॒तंविश्वा॒यद्‌वा॒मनु॒ष्टवे᳚ |<span class='RishiDevChandas'>{आत्रेयः पौरः | अश्विनौ | अनुष्टुप्}</span><p>नाना᳚जा॒ताव॑रे॒पसा॒सम॒स्मेबन्धु॒मेय॑थुः॒(स्वाहा᳚) || 4 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>आयद्वां᳚सू॒र्यारथं॒तिष्ठ॑द्रघु॒ष्यदं॒सदा᳚ |<span class='RishiDevChandas'>{आत्रेयः पौरः | अश्विनौ | अनुष्टुप्}</span><p>परि॑वामरु॒षावयो᳚घृ॒णाव॑रन्तआ॒तपः॒(स्वाहा᳚) || 5 || </td>
+<td class='VargaStyle1'>आयद्‌वां᳚सू॒र्यारथं॒तिष्ठ॑द्‌रघु॒ष्यदं॒सदा᳚ |<span class='RishiDevChandas'>{आत्रेयः पौरः | अश्विनौ | अनुष्टुप्}</span><p>परि॑वामरु॒षावयो᳚घृ॒णाव॑रन्तआ॒तपः॒(स्वाहा᳚) || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>यु॒वोरत्रि॑श्चिकेतति॒नरा᳚सु॒म्नेन॒चेत॑सा |<span class='RishiDevChandas'>{आत्रेयः पौरः | अश्विनौ | अनुष्टुप्}</span><p>घ॒र्मंयद्वा᳚मरे॒पसं॒नास॑त्या॒स्नाभु॑र॒ण्यति॒(स्वाहा᳚) || 6 || <span class='MantraNumbering'>वर्ग:12</span></td>
+<td class='VargaStyle2'>यु॒वोरत्रि॑श्चिकेतति॒नरा᳚सु॒म्नेन॒चेत॑सा |<span class='RishiDevChandas'>{आत्रेयः पौरः | अश्विनौ | अनुष्टुप्}</span><p>घ॒र्मंयद्‌वा᳚मरे॒पसं॒नास॑त्या॒स्नाभु॑र॒ण्यति॒(स्वाहा᳚) || 6 || <span class='MantraNumbering'>वर्ग:12</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>उ॒ग्रोवां᳚ककु॒होय॒यिःशृ॒ण्वेयामे᳚षुसंत॒निः |<span class='RishiDevChandas'>{आत्रेयः पौरः | अश्विनौ | अनुष्टुप्}</span><p>यद्वां॒दंसो᳚भिरश्वि॒नात्रि᳚र्नराव॒वर्त॑ति॒(स्वाहा᳚) || 7 || </td>
+<td class='VargaStyle2'>उ॒ग्रोवां᳚ककु॒होय॒यिःशृ॒ण्वेयामे᳚षुसंत॒निः |<span class='RishiDevChandas'>{आत्रेयः पौरः | अश्विनौ | अनुष्टुप्}</span><p>यद्‌वां॒दंसो᳚भिरश्वि॒नाऽत्रि᳚र्नराव॒वर्त॑ति॒(स्वाहा᳚) || 7 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>मध्व॑ऊ॒षुम॑धूयुवा॒रुद्रा॒सिष॑क्तिपि॒प्युषी᳚ |<span class='RishiDevChandas'>{आत्रेयः पौरः | अश्विनौ | अनुष्टुप्}</span><p>यत्स॑मु॒द्राति॒पर्ष॑थःप॒क्वाःपृक्षो᳚भरन्तवा॒‌म्(स्वाहा᳚) || 8 || </td>
+<td class='VargaStyle2'>मध्व॑ऊ॒षुम॑धूयुवा॒रुद्रा॒सिष॑क्तिपि॒प्युषी᳚ |<span class='RishiDevChandas'>{आत्रेयः पौरः | अश्विनौ | अनुष्टुप्}</span><p>यत्‌स॑मु॒द्राति॒पर्ष॑थःप॒क्वाःपृक्षो᳚भरन्तवा॒‌म्(स्वाहा᳚) || 8 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>स॒त्यमिद्वा,उ॑अश्विनायु॒वामा᳚हुर्मयो॒भुवा᳚ |<span class='RishiDevChandas'>{आत्रेयः पौरः | अश्विनौ | अनुष्टुप्}</span><p>तायाम᳚न्याम॒हूत॑मा॒याम॒न्नामृ॑ळ॒यत्त॑मा॒(स्वाहा᳚) || 9 || </td>
+<td class='VargaStyle2'>स॒त्यमिद्‌वा,उ॑अश्विनायु॒वामा᳚हुर्मयो॒भुवा᳚ |<span class='RishiDevChandas'>{आत्रेयः पौरः | अश्विनौ | अनुष्टुप्}</span><p>तायाम᳚न्‌याम॒हूत॑मा॒याम॒न्नामृ॑ळ॒यत्त॑मा॒(स्वाहा᳚) || 9 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>इ॒माब्रह्मा᳚णि॒वर्ध॑ना॒श्विभ्यां᳚सन्तु॒शंत॑मा |<span class='RishiDevChandas'>{आत्रेयः पौरः | अश्विनौ | अनुष्टुप्}</span><p>यातक्षा᳚म॒रथाँ᳚,इ॒वावो᳚चामबृ॒हन्नमः॒(स्वाहा᳚) || 10 || </td>
+<td class='VargaStyle2'>इ॒माब्रह्मा᳚णि॒वर्ध॑ना॒ऽश्विभ्यां᳚सन्तु॒शंत॑मा |<span class='RishiDevChandas'>{आत्रेयः पौरः | अश्विनौ | अनुष्टुप्}</span><p>यातक्षा᳚म॒रथाँ᳚,इ॒वाऽवो᳚चामबृ॒हन्नमः॒(स्वाहा᳚) || 10 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[74] कूष्ठोदेवाविति दशर्चस्य सूक्तस्यात्रेयः पौरोश्विनावनुष्टुप् |<span class='MantraNumbering'>{मंडल:5, सूक्त:74}{अनुवाक:6, सूक्त:2}{अष्टक:4, अध्याय:4}</span>
 </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>कूष्ठो᳚देवावश्विना॒द्यादि॒वोम॑नावसू |<span class='RishiDevChandas'>{आत्रेयः पौरः | अश्विनौ | अनुष्टुप्}</span><p>तच्छ्र॑वथोवृषण्वसू॒,अत्रि᳚र्वा॒मावि॑वासति॒(स्वाहा᳚) || 1 || <span class='MantraNumbering'>वर्ग:13</span></td>
+<td class='VargaStyle1'>कूष्ठो᳚देवावश्विना॒ऽद्यादि॒वोम॑नावसू |<span class='RishiDevChandas'>{आत्रेयः पौरः | अश्विनौ | अनुष्टुप्}</span><p>तच्छ्र॑वथोवृषण्वसू॒,अत्रि᳚र्वा॒मावि॑वासति॒(स्वाहा᳚) || 1 || <span class='MantraNumbering'>वर्ग:13</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>कुह॒त्याकुह॒नुश्रु॒तादि॒विदे॒वानास॑त्या |<span class='RishiDevChandas'>{आत्रेयः पौरः | अश्विनौ | अनुष्टुप्}</span><p>कस्मि॒न्नाय॑तथो॒जने॒कोवां᳚न॒दीनां॒सचा॒(स्वाहा᳚) || 2 || </td>
@@ -2203,7 +2203,7 @@
 <td class='VargaStyle2'>आवां॒रथो॒रथा᳚नां॒येष्ठो᳚यात्वश्विना |<span class='RishiDevChandas'>{आत्रेयः पौरः | अश्विनौ | अनुष्टुप्}</span><p>पु॒रूचि॑दस्म॒युस्ति॒रआ᳚ङ्गू॒षोमर्त्ये॒ष्वा(स्वाहा᳚) || 8 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>शमू॒षुवां᳚मधूयुवा॒स्माक॑मस्तुचर्कृ॒तिः |<span class='RishiDevChandas'>{आत्रेयः पौरः | अश्विनौ | अनुष्टुप्}</span><p>अ॒र्वा॒ची॒नावि॑चेतसा॒विभिः॑श्ये॒नेव॑दीयत॒‌म्(स्वाहा᳚) || 9 || </td>
+<td class='VargaStyle2'>शमू॒षुवां᳚मधूयुवा॒ऽस्माक॑मस्तुचर्कृ॒तिः |<span class='RishiDevChandas'>{आत्रेयः पौरः | अश्विनौ | अनुष्टुप्}</span><p>अ॒र्वा॒ची॒नावि॑चेतसा॒विभिः॑श्ये॒नेव॑दीयत॒‌म्(स्वाहा᳚) || 9 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>अश्वि॑ना॒यद्ध॒कर्हि॑चिच्छुश्रू॒यात॑मि॒मंहव᳚म् |<span class='RishiDevChandas'>{आत्रेयः पौरः | अश्विनौ | अनुष्टुप्}</span><p>वस्वी᳚रू॒षुवां॒भुजः॑पृ॒ञ्चन्ति॒सुवां॒पृचः॒(स्वाहा᳚) || 10 || </td>
@@ -2244,16 +2244,16 @@
 </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>आभा᳚त्य॒ग्निरु॒षसा॒मनी᳚क॒मुद्विप्रा᳚णांदेव॒यावाचो᳚,अस्थुः |<span class='RishiDevChandas'>{भौमोत्रिः | अश्विनौ | त्रिष्टुप्}</span><p>अ॒र्वाञ्चा᳚नू॒नंर॑थ्ये॒हया᳚तंपीपि॒वांस॑मश्विनाघ॒र्ममच्छ॒(स्वाहा᳚) || 1 || <span class='MantraNumbering'>वर्ग:17</span></td>
+<td class='VargaStyle1'>आभा᳚त्य॒ग्निरु॒षसा॒मनी᳚क॒मुद्‌विप्रा᳚णांदेव॒यावाचो᳚,अस्थुः |<span class='RishiDevChandas'>{भौमोत्रिः | अश्विनौ | त्रिष्टुप्}</span><p>अ॒र्वाञ्चा᳚नू॒नंर॑थ्ये॒हया᳚तंपीपि॒वांस॑मश्विनाघ॒र्ममच्छ॒(स्वाहा᳚) || 1 || <span class='MantraNumbering'>वर्ग:17</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>नसं᳚स्कृ॒तंप्रमि॑मीतो॒गमि॒ष्ठान्ति॑नू॒नम॒श्विनोप॑स्तुते॒ह |<span class='RishiDevChandas'>{भौमोत्रिः | अश्विनौ | त्रिष्टुप्}</span><p>दिवा᳚भिपि॒त्वेऽव॒साग॑मिष्ठा॒प्रत्यव॑र्तिंदा॒शुषे॒शम्भ॑विष्ठा॒(स्वाहा᳚) || 2 || </td>
+<td class='VargaStyle1'>नसं᳚स्कृ॒तंप्रमि॑मीतो॒गमि॒ष्ठाऽन्ति॑नू॒नम॒श्विनोप॑स्तुते॒ह |<span class='RishiDevChandas'>{भौमोत्रिः | अश्विनौ | त्रिष्टुप्}</span><p>दिवा᳚भिपि॒त्वेऽव॒साग॑मिष्ठा॒प्रत्यव॑र्तिंदा॒शुषे॒शम्भ॑विष्ठा॒(स्वाहा᳚) || 2 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>उ॒ताया᳚तंसंग॒वेप्रा॒तरह्नो᳚म॒ध्यंदि॑न॒उदि॑ता॒सूर्य॑स्य |<span class='RishiDevChandas'>{भौमोत्रिः | अश्विनौ | त्रिष्टुप्}</span><p>दिवा॒नक्त॒मव॑सा॒शंत॑मेन॒नेदानीं᳚पी॒तिर॒श्विनात॑तान॒(स्वाहा᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>इ॒दंहिवां᳚प्र॒दिवि॒स्थान॒मोक॑इ॒मेगृ॒हा,अ॑श्विने॒दंदु॑रो॒णम् |<span class='RishiDevChandas'>{भौमोत्रिः | अश्विनौ | त्रिष्टुप्}</span><p>आनो᳚दि॒वोबृ॑ह॒तःपर्व॑ता॒दाद्भ्योया᳚त॒मिष॒मूर्जं॒वह᳚न्ता॒(स्वाहा᳚) || 4 || </td>
+<td class='VargaStyle1'>इ॒दंहिवां᳚प्र॒दिवि॒स्थान॒मोक॑इ॒मेगृ॒हा,अ॑श्विने॒दंदु॑रो॒णम् |<span class='RishiDevChandas'>{भौमोत्रिः | अश्विनौ | त्रिष्टुप्}</span><p>आनो᳚दि॒वोबृ॑ह॒तःपर्व॑ता॒दाऽद्भ्योया᳚त॒मिष॒मूर्जं॒वह᳚न्ता॒(स्वाहा᳚) || 4 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>सम॒श्विनो॒रव॑सा॒नूत॑नेनमयो॒भुवा᳚सु॒प्रणी᳚तीगमेम |<span class='RishiDevChandas'>{भौमोत्रिः | अश्विनौ | त्रिष्टुप्}</span><p>आनो᳚र॒यिंव॑हत॒मोतवी॒रानाविश्वा᳚न्यमृता॒सौभ॑गानि॒(स्वाहा᳚) || 5 || </td>
@@ -2266,13 +2266,13 @@
 <td class='VargaStyle2'>प्रा॒त॒र्यावा᳚णाप्रथ॒माय॑जध्वंपु॒रागृध्रा॒दर॑रुषःपिबातः |<span class='RishiDevChandas'>{भौमोत्रिः | अश्विनौ | त्रिष्टुप्}</span><p>प्रा॒तर्हिय॒ज्ञम॒श्विना᳚द॒धाते॒प्रशं᳚सन्तिक॒वयः॑पूर्व॒भाजः॒(स्वाहा᳚) || 1 || <span class='MantraNumbering'>वर्ग:18</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>प्रा॒तर्य॑जध्वम॒श्विना᳚हिनोत॒नसा॒यम॑स्तिदेव॒या,अजु॑ष्टम् |<span class='RishiDevChandas'>{भौमोत्रिः | अश्विनौ | त्रिष्टुप्}</span><p>उ॒तान्यो,अ॒स्मद्य॑जते॒विचावः॒पूर्वः॑पूर्वो॒यज॑मानो॒वनी᳚या॒‌न्(स्वाहा᳚) || 2 || </td>
+<td class='VargaStyle2'>प्रा॒तर्य॑जध्वम॒श्विना᳚हिनोत॒नसा॒यम॑स्तिदेव॒या,अजु॑ष्टम् |<span class='RishiDevChandas'>{भौमोत्रिः | अश्विनौ | त्रिष्टुप्}</span><p>उ॒तान्यो,अ॒स्मद्‌य॑जते॒विचावः॒पूर्वः॑पूर्वो॒यज॑मानो॒वनी᳚या॒‌न्(स्वाहा᳚) || 2 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>हिर᳚ण्यत्व॒ङ्मधु॑वर्णोघृ॒तस्नुः॒पृक्षो॒वह॒न्नारथो᳚वर्ततेवाम् |<span class='RishiDevChandas'>{भौमोत्रिः | अश्विनौ | त्रिष्टुप्}</span><p>मनो᳚जवा,अश्विना॒वात॑रंहा॒येना᳚तिया॒थोदु॑रि॒तानि॒विश्वा॒(स्वाहा᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>योभूयि॑ष्ठं॒नास॑त्याभ्यांवि॒वेष॒चनि॑ष्ठंपि॒त्वोरर॑तेविभा॒गे |<span class='RishiDevChandas'>{भौमोत्रिः | अश्विनौ | त्रिष्टुप्}</span><p>सतो॒कम॑स्यपीपर॒च्छमी᳚भि॒रनू᳚र्ध्वभासः॒सद॒मित्तु॑तुर्या॒‌त्(स्वाहा᳚) || 4 || </td>
+<td class='VargaStyle2'>योभूयि॑ष्ठं॒नास॑त्याभ्यांवि॒वेष॒चनि॑ष्ठंपि॒त्वोरर॑तेविभा॒गे |<span class='RishiDevChandas'>{भौमोत्रिः | अश्विनौ | त्रिष्टुप्}</span><p>सतो॒कम॑स्यपीपर॒च्छमी᳚भि॒रनू᳚र्ध्वभासः॒सद॒मित्‌तु॑तुर्या॒‌त्(स्वाहा᳚) || 4 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>सम॒श्विनो॒रव॑सा॒नूत॑नेनमयो॒भुवा᳚सु॒प्रणी᳚तीगमेम |<span class='RishiDevChandas'>{भौमोत्रिः | अश्विनौ | त्रिष्टुप्}</span><p>आनो᳚र॒यिंव॑हत॒मोतवी॒रानाविश्वा᳚न्यमृता॒सौभ॑गानि॒(स्वाहा᳚) || 5 || </td>
@@ -2291,7 +2291,7 @@
 <td class='VargaStyle1'>अश्वि॑नावाजिनीवसूजु॒षेथां᳚य॒ज्ञमि॒ष्टये᳚ |<span class='RishiDevChandas'>{आत्रेयः सप्तवध्रिः | अश्विनौ | उष्णिक्}</span><p>हं॒सावि॑वपतत॒मासु॒ताँ,उप॒(स्वाहा᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>अत्रि॒र्यद्वा᳚मव॒रोह᳚न्नृ॒बीस॒मजो᳚हवी॒न्नाध॑मानेव॒योषा᳚ |<span class='RishiDevChandas'>{आत्रेयः सप्तवध्रिः | अश्विनौ | त्रिष्टुप्}</span><p>श्ये॒नस्य॑चि॒ज्जव॑सा॒नूत॑ने॒नाग॑च्छतमश्विना॒शंत॑मेन॒(स्वाहा᳚) || 4 || </td>
+<td class='VargaStyle1'>अत्रि॒र्यद्‌वा᳚मव॒रोह᳚न्नृ॒बीस॒मजो᳚हवी॒न्नाध॑मानेव॒योषा᳚ |<span class='RishiDevChandas'>{आत्रेयः सप्तवध्रिः | अश्विनौ | त्रिष्टुप्}</span><p>श्ये॒नस्य॑चि॒ज्जव॑सा॒नूत॑ने॒नाऽऽग॑च्छतमश्विना॒शंत॑मेन॒(स्वाहा᳚) || 4 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>विजि॑हीष्ववनस्पते॒योनिः॒सूष्य᳚न्त्या,इव |<span class='RishiDevChandas'>{आत्रेयः सप्तवध्रिः | अश्विनौ | अनुष्टुप्}</span><p>श्रु॒तंमे᳚,अश्विना॒हवं᳚स॒प्तव॑ध्रिंचमुञ्चत॒‌म्(स्वाहा᳚) || 5 || <span class='MantraNumbering'>वर्ग:20</span></td>
