--- a/Rigveda/SamhitaPatha/Kannada/Ashtaka/Format4/RVS-Kannada-F4-A04.html
+++ b/Rigveda/SamhitaPatha/Kannada/Ashtaka/Format4/RVS-Kannada-F4-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ಋಗ್ವೇದ ಸಂಹಿತಾ (ಅಷ್ಟಕ: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 10-Jan-2025]</h6>
+<br> [Last updated on: 13-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1697,7 +1697,7 @@
 <td class='VargaStyle2'>ತದೃ॒ತಂಪೃ॑ಥಿವಿಬೃ॒ಹಚ್ಛ್ರ॑ವಏ॒ಷಋಷೀ᳚ಣಾಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ರಾತಹವ್ಯಃ | ಮಿತ್ರಾವರುಣೌ | ಅನುಷ್ಟುಪ್}</span><p>ಜ್ರ॒ಯ॒ಸಾ॒ನಾವರಂ᳚ಪೃ॒ಥ್ವತಿ॑ಕ್ಷರಂತಿ॒ಯಾಮ॑ಭಿಃ॒(ಸ್ವಾಹಾ᳚) || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಆಯದ್ವಾ᳚ಮೀಯಚಕ್ಷಸಾ॒ಮಿತ್ರ॑ವ॒ಯಂಚ॑ಸೂ॒ರಯಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ರಾತಹವ್ಯಃ | ಮಿತ್ರಾವರುಣೌ | ಅನುಷ್ಟುಪ್}</span><p>ವ್ಯಚಿ॑ಷ್ಠೇಬಹು॒ಪಾಯ್ಯೇ॒ಯತೇ᳚ಮಹಿಸ್ವ॒ರಾಜ್ಯೇ॒(ಸ್ವಾಹಾ᳚) || 6 || </td>
+<td class='VargaStyle2'>ಆಯದ್‌ವಾ᳚ಮೀಯಚಕ್ಷಸಾ॒ಮಿತ್ರ॑ವ॒ಯಂಚ॑ಸೂ॒ರಯಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ರಾತಹವ್ಯಃ | ಮಿತ್ರಾವರುಣೌ | ಅನುಷ್ಟುಪ್}</span><p>ವ್ಯಚಿ॑ಷ್ಠೇಬಹು॒ಪಾಯ್ಯೇ॒ಯತೇ᳚ಮಹಿಸ್ವ॒ರಾಜ್ಯೇ॒(ಸ್ವಾಹಾ᳚) || 6 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[59] ಬಳಿತ್ಥಾದೇವೇತಿ ಪಂಚರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯಾತ್ರೇಯೋಯಜತೋ ಮಿತ್ರಾವರುಣಾವನುಷ್ಟುಪ್ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:4, ಅಧ್ಯಾಯ:4}{ಮಂಡಲ:5, ಸೂಕ್ತ:67}{ಅನುವಾಕ:5, ಸೂಕ್ತ:11}</td>
@@ -1739,10 +1739,10 @@
 <td class='SuktaLabel'>[61] ತ್ರೀರೋಚನೇತಿ ಚತುರೃಚಸ್ಯ ಸೂಕ್ತಸ್ಯಾತ್ರೇಯ ಉರುಚಕ್ರಿರ್ಮಿತ್ರಾವರುಣೌತ್ರಿಷ್ಟುಪ್ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:4, ಅಧ್ಯಾಯ:4}{ಮಂಡಲ:5, ಸೂಕ್ತ:69}{ಅನುವಾಕ:5, ಸೂಕ್ತ:13}</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ತ್ರೀರೋ᳚ಚ॒ನಾವ॑ರುಣ॒ತ್ರೀಁರು॒ತದ್ಯೂಂತ್ರೀಣಿ॑ಮಿತ್ರಧಾರಯಥೋ॒ರಜಾಂ᳚ಸಿ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ಉರೂಚಕ್ರಿಃ | ಮಿತ್ರಾವರುಣೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ವಾ॒ವೃ॒ಧಾ॒ನಾವ॒ಮತಿಂ᳚ಕ್ಷ॒ತ್ರಿಯ॒ಸ್ಯಾನು᳚ವ್ರ॒ತಂರಕ್ಷ॑ಮಾಣಾವಜು॒ರ್‍ಯಂ(ಸ್ವಾಹಾ᳚) || 1 || <span class='MantraNumbering'>ವರ್ಗ:7</span></td>
+<td class='VargaStyle1'>ತ್ರೀರೋ᳚ಚ॒ನಾವ॑ರುಣ॒ತ್ರೀಁರು॒ತದ್ಯೂನ್‌ತ್ರೀಣಿ॑ಮಿತ್ರಧಾರಯಥೋ॒ರಜಾಂ᳚ಸಿ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ಉರೂಚಕ್ರಿಃ | ಮಿತ್ರಾವರುಣೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ವಾ॒ವೃ॒ಧಾ॒ನಾವ॒ಮತಿಂ᳚ಕ್ಷ॒ತ್ರಿಯ॒ಸ್ಯಾಽನು᳚ವ್ರ॒ತಂರಕ್ಷ॑ಮಾಣಾವಜು॒ರ್‍ಯಂ(ಸ್ವಾಹಾ᳚) || 1 || <span class='MantraNumbering'>ವರ್ಗ:7</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಇರಾ᳚ವತೀರ್‍ವರುಣಧೇ॒ನವೋ᳚ವಾಂ॒ಮಧು॑ಮದ್ವಾಂ॒ಸಿಂಧ॑ವೋಮಿತ್ರದುಹ್ರೇ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ಉರೂಚಕ್ರಿಃ | ಮಿತ್ರಾವರುಣೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ತ್ರಯ॑ಸ್ತಸ್ಥುರ್‍ವೃಷ॒ಭಾಸ॑ಸ್ತಿಸೃ॒ಣಾಂಧಿ॒ಷಣಾ᳚ನಾಂರೇತೋ॒ಧಾವಿದ್ಯು॒ಮಂತಃ॒(ಸ್ವಾಹಾ᳚) || 2 || </td>
+<td class='VargaStyle1'>ಇರಾ᳚ವತೀರ್‍ವರುಣಧೇ॒ನವೋ᳚ವಾಂ॒ಮಧು॑ಮದ್ವಾಂ॒ಸಿಂಧ॑ವೋಮಿತ್ರದುಹ್ರೇ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ಉರೂಚಕ್ರಿಃ | ಮಿತ್ರಾವರುಣೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ತ್ರಯ॑ಸ್ತಸ್ಥುರ್‌ವೃಷ॒ಭಾಸ॑ಸ್ತಿಸೄ॒ಣಾಂಧಿ॒ಷಣಾ᳚ನಾಂರೇತೋ॒ಧಾವಿದ್ಯು॒ಮಂತಃ॒(ಸ್ವಾಹಾ᳚) || 2 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಪ್ರಾ॒ತರ್ದೇ॒ವೀಮದಿ॑ತಿಂಜೋಹವೀಮಿಮ॒ಧ್ಯಂದಿ॑ನ॒ಉದಿ॑ತಾ॒ಸೂರ್‍ಯ॑ಸ್ಯ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ಉರೂಚಕ್ರಿಃ | ಮಿತ್ರಾವರುಣೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ರಾ॒ಯೇಮಿ॑ತ್ರಾವರುಣಾಸ॒ರ್‍ವತಾ॒ತೇಳೇ᳚ತೋ॒ಕಾಯ॒ತನ॑ಯಾಯ॒ಶಂಯೋಃ(ಸ್ವಾಹಾ᳚) || 3 || </td>
@@ -1760,7 +1760,7 @@
 <td class='VargaStyle2'>ತಾವಾಂ᳚ಸ॒ಮ್ಯಗ॑ದ್ರುಹ್ವಾ॒ಣೇಷ॑ಮಶ್ಯಾಮ॒ಧಾಯ॑ಸೇ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ಉರೂಚಕ್ರಿಃ | ಮಿತ್ರಾವರುಣೌ | ಗಾಯತ್ರೀ}</span><p>ವ॒ಯಂತೇರು॑ದ್ರಾಸ್ಯಾಮ॒(ಸ್ವಾಹಾ᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಪಾ॒ತಂನೋ᳚ರುದ್ರಾಪಾ॒ಯುಭಿ॑ರು॒ತತ್ರಾ᳚ಯೇಥಾಂಸುತ್ರಾ॒ತ್ರಾ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ಉರೂಚಕ್ರಿಃ | ಮಿತ್ರಾವರುಣೌ | ಗಾಯತ್ರೀ}</span><p>ತು॒ರ್‍ಯಾಮ॒ದಸ್ಯೂಂ᳚ತ॒ನೂಭಿಃ॒(ಸ್ವಾಹಾ᳚) || 3 || </td>
+<td class='VargaStyle2'>ಪಾ॒ತಂನೋ᳚ರುದ್ರಾಪಾ॒ಯುಭಿ॑ರು॒ತತ್ರಾ᳚ಯೇಥಾಂಸುತ್ರಾ॒ತ್ರಾ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ಉರೂಚಕ್ರಿಃ | ಮಿತ್ರಾವರುಣೌ | ಗಾಯತ್ರೀ}</span><p>ತು॒ರ್‍ಯಾಮ॒ದಸ್ಯೂ᳚ನ್‌ತ॒ನೂಭಿಃ॒(ಸ್ವಾಹಾ᳚) || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಮಾಕಸ್ಯಾ᳚ದ್ಭುತಕ್ರತೂಯ॒ಕ್ಷಂಭು॑ಜೇಮಾತ॒ನೂಭಿಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ಉರೂಚಕ್ರಿಃ | ಮಿತ್ರಾವರುಣೌ | ಗಾಯತ್ರೀ}</span><p>ಮಾಶೇಷ॑ಸಾ॒ಮಾತನ॑ಸಾ॒(ಸ್ವಾಹಾ᳚) || 4 || </td>
@@ -1793,40 +1793,40 @@
 <td class='SuktaLabel'>[65] ಯದದ್ಯಸ್ಥಇತಿ ದಶರ್ಚಸ್ಯಸೂತಸ್ಯಾತ್ರೇಯಃ ಪೌರೋಶ್ವಿನಾವನುಷ್ಟುಪ್ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:4, ಅಧ್ಯಾಯ:4}{ಮಂಡಲ:5, ಸೂಕ್ತ:73}{ಅನುವಾಕ:6, ಸೂಕ್ತ:1}</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಯದ॒ದ್ಯಸ್ಥಃಪ॑ರಾ॒ವತಿ॒ಯದ᳚ರ್ವಾ॒ವತ್ಯ॑ಶ್ವಿನಾ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪೌರಃ | ಅಶ್ವಿನೌ | ಅನುಷ್ಟುಪ್}</span><p>ಯದ್ವಾ᳚ಪು॒ರೂಪು॑ರುಭುಜಾ॒ಯದಂ॒ತರಿ॑ಕ್ಷ॒ಆಗ॑ತ॒‌ಮ್(ಸ್ವಾಹಾ᳚) || 1 || <span class='MantraNumbering'>ವರ್ಗ:11</span></td>
+<td class='VargaStyle1'>ಯದ॒ದ್ಯಸ್ಥಃಪ॑ರಾ॒ವತಿ॒ಯದ᳚ರ್ವಾ॒ವತ್ಯ॑ಶ್ವಿನಾ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪೌರಃ | ಅಶ್ವಿನೌ | ಅನುಷ್ಟುಪ್}</span><p>ಯದ್‌ವಾ᳚ಪು॒ರೂಪು॑ರುಭುಜಾ॒ಯದಂ॒ತರಿ॑ಕ್ಷ॒ಆಗ॑ತ॒‌ಮ್(ಸ್ವಾಹಾ᳚) || 1 || <span class='MantraNumbering'>ವರ್ಗ:11</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಇ॒ಹತ್ಯಾಪು॑ರು॒ಭೂತ॑ಮಾಪು॒ರೂದಂಸಾಂ᳚ಸಿ॒ಬಿಭ್ರ॑ತಾ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪೌರಃ | ಅಶ್ವಿನೌ | ಅನುಷ್ಟುಪ್}</span><p>ವ॒ರ॒ಸ್ಯಾಯಾ॒ಮ್ಯಧ್ರಿ॑ಗೂಹು॒ವೇತು॒ವಿಷ್ಟ॑ಮಾಭು॒ಜೇ(ಸ್ವಾಹಾ᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಈ॒ರ್ಮಾನ್ಯದ್ವಪು॑ಷೇ॒ವಪು॑ಶ್ಚ॒ಕ್ರಂರಥ॑ಸ್ಯಯೇಮಥುಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪೌರಃ | ಅಶ್ವಿನೌ | ಅನುಷ್ಟುಪ್}</span><p>ಪರ್‍ಯ॒ನ್ಯಾನಾಹು॑ಷಾಯು॒ಗಾಮ॒ಹ್ನಾರಜಾಂ᳚ಸಿದೀಯಥಃ॒(ಸ್ವಾಹಾ᳚) || 3 || </td>
+<td class='VargaStyle1'>ಈ॒ರ್ಮಾನ್ಯದ್‌ವಪು॑ಷೇ॒ವಪು॑ಶ್ಚ॒ಕ್ರಂರಥ॑ಸ್ಯಯೇಮಥುಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪೌರಃ | ಅಶ್ವಿನೌ | ಅನುಷ್ಟುಪ್}</span><p>ಪರ್‍ಯ॒ನ್ಯಾನಾಹು॑ಷಾಯು॒ಗಾಮ॒ಹ್ನಾರಜಾಂ᳚ಸಿದೀಯಥಃ॒(ಸ್ವಾಹಾ᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ತದೂ॒ಷುವಾ᳚ಮೇ॒ನಾಕೃ॒ತಂವಿಶ್ವಾ॒ಯದ್ವಾ॒ಮನು॒ಷ್ಟವೇ᳚ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪೌರಃ | ಅಶ್ವಿನೌ | ಅನುಷ್ಟುಪ್}</span><p>ನಾನಾ᳚ಜಾ॒ತಾವ॑ರೇ॒ಪಸಾ॒ಸಮ॒ಸ್ಮೇಬಂಧು॒ಮೇಯ॑ಥುಃ॒(ಸ್ವಾಹಾ᳚) || 4 || </td>
+<td class='VargaStyle1'>ತದೂ॒ಷುವಾ᳚ಮೇ॒ನಾಕೃ॒ತಂವಿಶ್ವಾ॒ಯದ್‌ವಾ॒ಮನು॒ಷ್ಟವೇ᳚ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪೌರಃ | ಅಶ್ವಿನೌ | ಅನುಷ್ಟುಪ್}</span><p>ನಾನಾ᳚ಜಾ॒ತಾವ॑ರೇ॒ಪಸಾ॒ಸಮ॒ಸ್ಮೇಬಂಧು॒ಮೇಯ॑ಥುಃ॒(ಸ್ವಾಹಾ᳚) || 4 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಆಯದ್ವಾಂ᳚ಸೂ॒ರ್‍ಯಾರಥಂ॒ತಿಷ್ಠ॑ದ್ರಘು॒ಷ್ಯದಂ॒ಸದಾ᳚ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪೌರಃ | ಅಶ್ವಿನೌ | ಅನುಷ್ಟುಪ್}</span><p>ಪರಿ॑ವಾಮರು॒ಷಾವಯೋ᳚ಘೃ॒ಣಾವ॑ರಂತಆ॒ತಪಃ॒(ಸ್ವಾಹಾ᳚) || 5 || </td>
+<td class='VargaStyle1'>ಆಯದ್‌ವಾಂ᳚ಸೂ॒ರ್‍ಯಾರಥಂ॒ತಿಷ್ಠ॑ದ್‌ರಘು॒ಷ್ಯದಂ॒ಸದಾ᳚ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪೌರಃ | ಅಶ್ವಿನೌ | ಅನುಷ್ಟುಪ್}</span><p>ಪರಿ॑ವಾಮರು॒ಷಾವಯೋ᳚ಘೃ॒ಣಾವ॑ರಂತಆ॒ತಪಃ॒(ಸ್ವಾಹಾ᳚) || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಯು॒ವೋರತ್ರಿ॑ಶ್ಚಿಕೇತತಿ॒ನರಾ᳚ಸು॒ಮ್ನೇನ॒ಚೇತ॑ಸಾ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪೌರಃ | ಅಶ್ವಿನೌ | ಅನುಷ್ಟುಪ್}</span><p>ಘ॒ರ್ಮಂಯದ್ವಾ᳚ಮರೇ॒ಪಸಂ॒ನಾಸ॑ತ್ಯಾ॒ಸ್ನಾಭು॑ರ॒ಣ್ಯತಿ॒(ಸ್ವಾಹಾ᳚) || 6 || <span class='MantraNumbering'>ವರ್ಗ:12</span></td>
+<td class='VargaStyle2'>ಯು॒ವೋರತ್ರಿ॑ಶ್ಚಿಕೇತತಿ॒ನರಾ᳚ಸು॒ಮ್ನೇನ॒ಚೇತ॑ಸಾ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪೌರಃ | ಅಶ್ವಿನೌ | ಅನುಷ್ಟುಪ್}</span><p>ಘ॒ರ್ಮಂಯದ್‌ವಾ᳚ಮರೇ॒ಪಸಂ॒ನಾಸ॑ತ್ಯಾ॒ಸ್ನಾಭು॑ರ॒ಣ್ಯತಿ॒(ಸ್ವಾಹಾ᳚) || 6 || <span class='MantraNumbering'>ವರ್ಗ:12</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಉ॒ಗ್ರೋವಾಂ᳚ಕಕು॒ಹೋಯ॒ಯಿಃಶೃ॒ಣ್ವೇಯಾಮೇ᳚ಷುಸಂತ॒ನಿಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪೌರಃ | ಅಶ್ವಿನೌ | ಅನುಷ್ಟುಪ್}</span><p>ಯದ್ವಾಂ॒ದಂಸೋ᳚ಭಿರಶ್ವಿ॒ನಾತ್ರಿ᳚ರ್‍ನರಾವ॒ವರ್‍ತ॑ತಿ॒(ಸ್ವಾಹಾ᳚) || 7 || </td>
+<td class='VargaStyle2'>ಉ॒ಗ್ರೋವಾಂ᳚ಕಕು॒ಹೋಯ॒ಯಿಃಶೃ॒ಣ್ವೇಯಾಮೇ᳚ಷುಸಂತ॒ನಿಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪೌರಃ | ಅಶ್ವಿನೌ | ಅನುಷ್ಟುಪ್}</span><p>ಯದ್‌ವಾಂ॒ದಂಸೋ᳚ಭಿರಶ್ವಿ॒ನಾಽತ್ರಿ᳚ರ್‍ನರಾವ॒ವರ್‍ತ॑ತಿ॒(ಸ್ವಾಹಾ᳚) || 7 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಮಧ್ವ॑ಊ॒ಷುಮ॑ಧೂಯುವಾ॒ರುದ್ರಾ॒ಸಿಷ॑ಕ್ತಿಪಿ॒ಪ್ಯುಷೀ᳚ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪೌರಃ | ಅಶ್ವಿನೌ | ಅನುಷ್ಟುಪ್}</span><p>ಯತ್ಸ॑ಮು॒ದ್ರಾತಿ॒ಪರ್ಷ॑ಥಃಪ॒ಕ್ವಾಃಪೃಕ್ಷೋ᳚ಭರಂತವಾ॒‌ಮ್(ಸ್ವಾಹಾ᳚) || 8 || </td>
+<td class='VargaStyle2'>ಮಧ್ವ॑ಊ॒ಷುಮ॑ಧೂಯುವಾ॒ರುದ್ರಾ॒ಸಿಷ॑ಕ್ತಿಪಿ॒ಪ್ಯುಷೀ᳚ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪೌರಃ | ಅಶ್ವಿನೌ | ಅನುಷ್ಟುಪ್}</span><p>ಯತ್‌ಸ॑ಮು॒ದ್ರಾತಿ॒ಪರ್ಷ॑ಥಃಪ॒ಕ್ವಾಃಪೃಕ್ಷೋ᳚ಭರಂತವಾ॒‌ಮ್(ಸ್ವಾಹಾ᳚) || 8 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಸ॒ತ್ಯಮಿದ್ವಾ,ಉ॑ಅಶ್ವಿನಾಯು॒ವಾಮಾ᳚ಹುರ್ಮಯೋ॒ಭುವಾ᳚ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪೌರಃ | ಅಶ್ವಿನೌ | ಅನುಷ್ಟುಪ್}</span><p>ತಾಯಾಮ᳚ನ್ಯಾಮ॒ಹೂತ॑ಮಾ॒ಯಾಮ॒ನ್ನಾಮೃ॑ಳ॒ಯತ್ತ॑ಮಾ॒(ಸ್ವಾಹಾ᳚) || 9 || </td>
+<td class='VargaStyle2'>ಸ॒ತ್ಯಮಿದ್‌ವಾ,ಉ॑ಅಶ್ವಿನಾಯು॒ವಾಮಾ᳚ಹುರ್‌ಮಯೋ॒ಭುವಾ᳚ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪೌರಃ | ಅಶ್ವಿನೌ | ಅನುಷ್ಟುಪ್}</span><p>ತಾಯಾಮ᳚ನ್‌ಯಾಮ॒ಹೂತ॑ಮಾ॒ಯಾಮ॒ನ್ನಾಮೃ॑ಳ॒ಯತ್ತ॑ಮಾ॒(ಸ್ವಾಹಾ᳚) || 9 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಇ॒ಮಾಬ್ರಹ್ಮಾ᳚ಣಿ॒ವರ್ಧ॑ನಾ॒ಶ್ವಿಭ್ಯಾಂ᳚ಸಂತು॒ಶಂತ॑ಮಾ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪೌರಃ | ಅಶ್ವಿನೌ | ಅನುಷ್ಟುಪ್}</span><p>ಯಾತಕ್ಷಾ᳚ಮ॒ರಥಾಁ᳚,ಇ॒ವಾವೋ᳚ಚಾಮಬೃ॒ಹನ್ನಮಃ॒(ಸ್ವಾಹಾ᳚) || 10 || </td>
+<td class='VargaStyle2'>ಇ॒ಮಾಬ್ರಹ್ಮಾ᳚ಣಿ॒ವರ್ಧ॑ನಾ॒ಽಶ್ವಿಭ್ಯಾಂ᳚ಸಂತು॒ಶಂತ॑ಮಾ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪೌರಃ | ಅಶ್ವಿನೌ | ಅನುಷ್ಟುಪ್}</span><p>ಯಾತಕ್ಷಾ᳚ಮ॒ರಥಾಁ᳚,ಇ॒ವಾಽವೋ᳚ಚಾಮಬೃ॒ಹನ್ನಮಃ॒(ಸ್ವಾಹಾ᳚) || 10 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[66] ಕೂಷ್ಠೋದೇವಾವಿತಿ ದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯಾತ್ರೇಯಃ ಪೌರೋಶ್ವಿನಾವನುಷ್ಟುಪ್ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:4, ಅಧ್ಯಾಯ:4}{ಮಂಡಲ:5, ಸೂಕ್ತ:74}{ಅನುವಾಕ:6, ಸೂಕ್ತ:2}</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಕೂಷ್ಠೋ᳚ದೇವಾವಶ್ವಿನಾ॒ದ್ಯಾದಿ॒ವೋಮ॑ನಾವಸೂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪೌರಃ | ಅಶ್ವಿನೌ | ಅನುಷ್ಟುಪ್}</span><p>ತಚ್ಛ್ರ॑ವಥೋವೃಷಣ್ವಸೂ॒,ಅತ್ರಿ᳚ರ್ವಾ॒ಮಾವಿ॑ವಾಸತಿ॒(ಸ್ವಾಹಾ᳚) || 1 || <span class='MantraNumbering'>ವರ್ಗ:13</span></td>
+<td class='VargaStyle1'>ಕೂಷ್ಠೋ᳚ದೇವಾವಶ್ವಿನಾ॒ಽದ್ಯಾದಿ॒ವೋಮ॑ನಾವಸೂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪೌರಃ | ಅಶ್ವಿನೌ | ಅನುಷ್ಟುಪ್}</span><p>ತಚ್ಛ್ರ॑ವಥೋವೃಷಣ್ವಸೂ॒,ಅತ್ರಿ᳚ರ್ವಾ॒ಮಾವಿ॑ವಾಸತಿ॒(ಸ್ವಾಹಾ᳚) || 1 || <span class='MantraNumbering'>ವರ್ಗ:13</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಕುಹ॒ತ್ಯಾಕುಹ॒ನುಶ್ರು॒ತಾದಿ॒ವಿದೇ॒ವಾನಾಸ॑ತ್ಯಾ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪೌರಃ | ಅಶ್ವಿನೌ | ಅನುಷ್ಟುಪ್}</span><p>ಕಸ್ಮಿ॒ನ್ನಾಯ॑ತಥೋ॒ಜನೇ॒ಕೋವಾಂ᳚ನ॒ದೀನಾಂ॒ಸಚಾ॒(ಸ್ವಾಹಾ᳚) || 2 || </td>
@@ -1835,7 +1835,7 @@
 <td class='VargaStyle1'>ಕಂಯಾ᳚ಥಃ॒ಕಂಹ॑ಗಚ್ಛಥಃ॒ಕಮಚ್ಛಾ᳚ಯುಂಜಾಥೇ॒ರಥಂ᳚ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪೌರಃ | ಅಶ್ವಿನೌ | ಅನುಷ್ಟುಪ್}</span><p>ಕಸ್ಯ॒ಬ್ರಹ್ಮಾ᳚ಣಿರಣ್ಯಥೋವ॒ಯಂವಾ᳚ಮುಶ್ಮಸೀ॒ಷ್ಟಯೇ॒(ಸ್ವಾಹಾ᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಪೌ॒ರಂಚಿ॒ದ್ಧ್ಯು॑ದ॒ಪ್ರುತಂ॒ಪೌರ॑ಪೌ॒ರಾಯ॒ಜಿನ್ವ॑ಥಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪೌರಃ | ಅಶ್ವಿನೌ | ಅನುಷ್ಟುಪ್}</span><p>ಯದೀಂ᳚ಗೃಭೀ॒ತತಾ᳚ತಯೇಸಿಂ॒ಹಮಿ॑ವದ್ರು॒ಹಸ್ಪ॒ದೇ(ಸ್ವಾಹಾ᳚) || 4 || </td>
+<td class='VargaStyle1'>ಪೌ॒ರಂಚಿ॒ದ್‌ಧ್ಯು॑ದ॒ಪ್ರುತಂ॒ಪೌರ॑ಪೌ॒ರಾಯ॒ಜಿನ್ವ॑ಥಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪೌರಃ | ಅಶ್ವಿನೌ | ಅನುಷ್ಟುಪ್}</span><p>ಯದೀಂ᳚ಗೃಭೀ॒ತತಾ᳚ತಯೇಸಿಂ॒ಹಮಿ॑ವದ್ರು॒ಹಸ್ಪ॒ದೇ(ಸ್ವಾಹಾ᳚) || 4 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಪ್ರಚ್ಯವಾ᳚ನಾಜ್ಜುಜು॒ರುಷೋ᳚ವ॒ವ್ರಿಮತ್ಕಂ॒ನಮುಂ᳚ಚಥಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪೌರಃ | ಅಶ್ವಿನೌ | ಅನುಷ್ಟುಪ್}</span><p>ಯುವಾ॒ಯದೀ᳚ಕೃ॒ಥಃಪುನ॒ರಾಕಾಮ॑ಮೃಣ್ವೇವ॒ಧ್ವ॑೧(ಅಃ॒)(ಸ್ವಾಹಾ᳚) || 5 || </td>
@@ -1850,7 +1850,7 @@
 <td class='VargaStyle2'>ಆವಾಂ॒ರಥೋ॒ರಥಾ᳚ನಾಂ॒ಯೇಷ್ಠೋ᳚ಯಾತ್ವಶ್ವಿನಾ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪೌರಃ | ಅಶ್ವಿನೌ | ಅನುಷ್ಟುಪ್}</span><p>ಪು॒ರೂಚಿ॑ದಸ್ಮ॒ಯುಸ್ತಿ॒ರಆಂ᳚ಗೂ॒ಷೋಮರ್‍ತ್ಯೇ॒ಷ್ವಾ(ಸ್ವಾಹಾ᳚) || 8 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಶಮೂ॒ಷುವಾಂ᳚ಮಧೂಯುವಾ॒ಸ್ಮಾಕ॑ಮಸ್ತುಚರ್ಕೃ॒ತಿಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪೌರಃ | ಅಶ್ವಿನೌ | ಅನುಷ್ಟುಪ್}</span><p>ಅ॒ರ್‍ವಾ॒ಚೀ॒ನಾವಿ॑ಚೇತಸಾ॒ವಿಭಿಃ॑ಶ್ಯೇ॒ನೇವ॑ದೀಯತ॒‌ಮ್(ಸ್ವಾಹಾ᳚) || 9 || </td>
+<td class='VargaStyle2'>ಶಮೂ॒ಷುವಾಂ᳚ಮಧೂಯುವಾ॒ಽಸ್ಮಾಕ॑ಮಸ್ತುಚರ್ಕೃ॒ತಿಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪೌರಃ | ಅಶ್ವಿನೌ | ಅನುಷ್ಟುಪ್}</span><p>ಅ॒ರ್‍ವಾ॒ಚೀ॒ನಾವಿ॑ಚೇತಸಾ॒ವಿಭಿಃ॑ಶ್ಯೇ॒ನೇವ॑ದೀಯತ॒‌ಮ್(ಸ್ವಾಹಾ᳚) || 9 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಅಶ್ವಿ॑ನಾ॒ಯದ್ಧ॒ಕರ್ಹಿ॑ಚಿಚ್ಛುಶ್ರೂ॒ಯಾತ॑ಮಿ॒ಮಂಹವಂ᳚ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪೌರಃ | ಅಶ್ವಿನೌ | ಅನುಷ್ಟುಪ್}</span><p>ವಸ್ವೀ᳚ರೂ॒ಷುವಾಂ॒ಭುಜಃ॑ಪೃಂ॒ಚಂತಿ॒ಸುವಾಂ॒ಪೃಚಃ॒(ಸ್ವಾಹಾ᳚) || 10 || </td>
@@ -1889,16 +1889,16 @@
 <td class='SuktaLabel'>[68] ಆಭಾತ್ಯಗ್ನಿರಿತಿ ಪಂಚರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಭೌಮೋತ್ರಿರಶ್ವಿನೌತ್ರಿಷ್ಟುಪ್ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:4, ಅಧ್ಯಾಯ:4}{ಮಂಡಲ:5, ಸೂಕ್ತ:76}{ಅನುವಾಕ:6, ಸೂಕ್ತ:4}</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಆಭಾ᳚ತ್ಯ॒ಗ್ನಿರು॒ಷಸಾ॒ಮನೀ᳚ಕ॒ಮುದ್ವಿಪ್ರಾ᳚ಣಾಂದೇವ॒ಯಾವಾಚೋ᳚,ಅಸ್ಥುಃ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಅಶ್ವಿನೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಅ॒ರ್‍ವಾಂಚಾ᳚ನೂ॒ನಂರ॑ಥ್ಯೇ॒ಹಯಾ᳚ತಂಪೀಪಿ॒ವಾಂಸ॑ಮಶ್ವಿನಾಘ॒ರ್ಮಮಚ್ಛ॒(ಸ್ವಾಹಾ᳚) || 1 || <span class='MantraNumbering'>ವರ್ಗ:17</span></td>
+<td class='VargaStyle1'>ಆಭಾ᳚ತ್ಯ॒ಗ್ನಿರು॒ಷಸಾ॒ಮನೀ᳚ಕ॒ಮುದ್‌ವಿಪ್ರಾ᳚ಣಾಂದೇವ॒ಯಾವಾಚೋ᳚,ಅಸ್ಥುಃ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಅಶ್ವಿನೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಅ॒ರ್‍ವಾಂಚಾ᳚ನೂ॒ನಂರ॑ಥ್ಯೇ॒ಹಯಾ᳚ತಂಪೀಪಿ॒ವಾಂಸ॑ಮಶ್ವಿನಾಘ॒ರ್ಮಮಚ್ಛ॒(ಸ್ವಾಹಾ᳚) || 1 || <span class='MantraNumbering'>ವರ್ಗ:17</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ನಸಂ᳚ಸ್ಕೃ॒ತಂಪ್ರಮಿ॑ಮೀತೋ॒ಗಮಿ॒ಷ್ಠಾಂತಿ॑ನೂ॒ನಮ॒ಶ್ವಿನೋಪ॑ಸ್ತುತೇ॒ಹ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಅಶ್ವಿನೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ದಿವಾ᳚ಭಿಪಿ॒ತ್ವೇಽವ॒ಸಾಗ॑ಮಿಷ್ಠಾ॒ಪ್ರತ್ಯವ॑ರ್‍ತಿಂದಾ॒ಶುಷೇ॒ಶಂಭ॑ವಿಷ್ಠಾ॒(ಸ್ವಾಹಾ᳚) || 2 || </td>
+<td class='VargaStyle1'>ನಸಂ᳚ಸ್ಕೃ॒ತಂಪ್ರಮಿ॑ಮೀತೋ॒ಗಮಿ॒ಷ್ಠಾಽನ್ತಿ॑ನೂ॒ನಮ॒ಶ್ವಿನೋಪ॑ಸ್ತುತೇ॒ಹ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಅಶ್ವಿನೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ದಿವಾ᳚ಭಿಪಿ॒ತ್ವೇಽವ॒ಸಾಗ॑ಮಿಷ್ಠಾ॒ಪ್ರತ್ಯವ॑ರ್‍ತಿಂದಾ॒ಶುಷೇ॒ಶಂಭ॑ವಿಷ್ಠಾ॒(ಸ್ವಾಹಾ᳚) || 2 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಉ॒ತಾಯಾ᳚ತಂಸಂಗ॒ವೇಪ್ರಾ॒ತರಹ್ನೋ᳚ಮ॒ಧ್ಯಂದಿ॑ನ॒ಉದಿ॑ತಾ॒ಸೂರ್‍ಯ॑ಸ್ಯ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಅಶ್ವಿನೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ದಿವಾ॒ನಕ್ತ॒ಮವ॑ಸಾ॒ಶಂತ॑ಮೇನ॒ನೇದಾನೀಂ᳚ಪೀ॒ತಿರ॒ಶ್ವಿನಾತ॑ತಾನ॒(ಸ್ವಾಹಾ᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಇ॒ದಂಹಿವಾಂ᳚ಪ್ರ॒ದಿವಿ॒ಸ್ಥಾನ॒ಮೋಕ॑ಇ॒ಮೇಗೃ॒ಹಾ,ಅ॑ಶ್ವಿನೇ॒ದಂದು॑ರೋ॒ಣಂ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಅಶ್ವಿನೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಆನೋ᳚ದಿ॒ವೋಬೃ॑ಹ॒ತಃಪರ್‍ವ॑ತಾ॒ದಾದ್ಭ್ಯೋಯಾ᳚ತ॒ಮಿಷ॒ಮೂರ್ಜಂ॒ವಹಂ᳚ತಾ॒(ಸ್ವಾಹಾ᳚) || 4 || </td>
+<td class='VargaStyle1'>ಇ॒ದಂಹಿವಾಂ᳚ಪ್ರ॒ದಿವಿ॒ಸ್ಥಾನ॒ಮೋಕ॑ಇ॒ಮೇಗೃ॒ಹಾ,ಅ॑ಶ್ವಿನೇ॒ದಂದು॑ರೋ॒ಣಂ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಅಶ್ವಿನೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಆನೋ᳚ದಿ॒ವೋಬೃ॑ಹ॒ತಃಪರ್‍ವ॑ತಾ॒ದಾಽದ್ಭ್ಯೋಯಾ᳚ತ॒ಮಿಷ॒ಮೂರ್ಜಂ॒ವಹಂ᳚ತಾ॒(ಸ್ವಾಹಾ᳚) || 4 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಸಮ॒ಶ್ವಿನೋ॒ರವ॑ಸಾ॒ನೂತ॑ನೇನಮಯೋ॒ಭುವಾ᳚ಸು॒ಪ್ರಣೀ᳚ತೀಗಮೇಮ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಅಶ್ವಿನೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಆನೋ᳚ರ॒ಯಿಂವ॑ಹತ॒ಮೋತವೀ॒ರಾನಾವಿಶ್ವಾ᳚ನ್ಯಮೃತಾ॒ಸೌಭ॑ಗಾನಿ॒(ಸ್ವಾಹಾ᳚) || 5 || </td>
@@ -1910,13 +1910,13 @@
 <td class='VargaStyle2'>ಪ್ರಾ॒ತ॒ರ್‍ಯಾವಾ᳚ಣಾಪ್ರಥ॒ಮಾಯ॑ಜಧ್ವಂಪು॒ರಾಗೃಧ್ರಾ॒ದರ॑ರುಷಃಪಿಬಾತಃ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಅಶ್ವಿನೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಪ್ರಾ॒ತರ್ಹಿಯ॒ಜ್ಞಮ॒ಶ್ವಿನಾ᳚ದ॒ಧಾತೇ॒ಪ್ರಶಂ᳚ಸಂತಿಕ॒ವಯಃ॑ಪೂರ್‍ವ॒ಭಾಜಃ॒(ಸ್ವಾಹಾ᳚) || 1 || <span class='MantraNumbering'>ವರ್ಗ:18</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಪ್ರಾ॒ತರ್‍ಯ॑ಜಧ್ವಮ॒ಶ್ವಿನಾ᳚ಹಿನೋತ॒ನಸಾ॒ಯಮ॑ಸ್ತಿದೇವ॒ಯಾ,ಅಜು॑ಷ್ಟಂ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಅಶ್ವಿನೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಉ॒ತಾನ್ಯೋ,ಅ॒ಸ್ಮದ್ಯ॑ಜತೇ॒ವಿಚಾವಃ॒ಪೂರ್‍ವಃ॑ಪೂರ್‍ವೋ॒ಯಜ॑ಮಾನೋ॒ವನೀ᳚ಯಾ॒‌ನ್(ಸ್ವಾಹಾ᳚) || 2 || </td>
+<td class='VargaStyle2'>ಪ್ರಾ॒ತರ್‍ಯ॑ಜಧ್ವಮ॒ಶ್ವಿನಾ᳚ಹಿನೋತ॒ನಸಾ॒ಯಮ॑ಸ್ತಿದೇವ॒ಯಾ,ಅಜು॑ಷ್ಟಂ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಅಶ್ವಿನೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಉ॒ತಾನ್ಯೋ,ಅ॒ಸ್ಮದ್‌ಯ॑ಜತೇ॒ವಿಚಾವಃ॒ಪೂರ್‍ವಃ॑ಪೂರ್‍ವೋ॒ಯಜ॑ಮಾನೋ॒ವನೀ᳚ಯಾ॒‌ನ್(ಸ್ವಾಹಾ᳚) || 2 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಹಿರ᳚ಣ್ಯತ್ವ॒ಙ್ಮಧು॑ವರ್ಣೋಘೃ॒ತಸ್ನುಃ॒ಪೃಕ್ಷೋ॒ವಹ॒ನ್ನಾರಥೋ᳚ವರ್‍ತತೇವಾಂ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಅಶ್ವಿನೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಮನೋ᳚ಜವಾ,ಅಶ್ವಿನಾ॒ವಾತ॑ರಂಹಾ॒ಯೇನಾ᳚ತಿಯಾ॒ಥೋದು॑ರಿ॒ತಾನಿ॒ವಿಶ್ವಾ॒(ಸ್ವಾಹಾ᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಯೋಭೂಯಿ॑ಷ್ಠಂ॒ನಾಸ॑ತ್ಯಾಭ್ಯಾಂವಿ॒ವೇಷ॒ಚನಿ॑ಷ್ಠಂಪಿ॒ತ್ವೋರರ॑ತೇವಿಭಾ॒ಗೇ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಅಶ್ವಿನೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಸತೋ॒ಕಮ॑ಸ್ಯಪೀಪರ॒ಚ್ಛಮೀ᳚ಭಿ॒ರನೂ᳚ರ್ಧ್ವಭಾಸಃ॒ಸದ॒ಮಿತ್ತು॑ತುರ್‍ಯಾ॒‌ತ್(ಸ್ವಾಹಾ᳚) || 4 || </td>
+<td class='VargaStyle2'>ಯೋಭೂಯಿ॑ಷ್ಠಂ॒ನಾಸ॑ತ್ಯಾಭ್ಯಾಂವಿ॒ವೇಷ॒ಚನಿ॑ಷ್ಠಂಪಿ॒ತ್ವೋರರ॑ತೇವಿಭಾ॒ಗೇ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಅಶ್ವಿನೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಸತೋ॒ಕಮ॑ಸ್ಯಪೀಪರ॒ಚ್ಛಮೀ᳚ಭಿ॒ರನೂ᳚ರ್‌ಧ್ವಭಾಸಃ॒ಸದ॒ಮಿತ್‌ತು॑ತುರ್‍ಯಾ॒‌ತ್(ಸ್ವಾಹಾ᳚) || 4 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಸಮ॒ಶ್ವಿನೋ॒ರವ॑ಸಾ॒ನೂತ॑ನೇನಮಯೋ॒ಭುವಾ᳚ಸು॒ಪ್ರಣೀ᳚ತೀಗಮೇಮ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಅಶ್ವಿನೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಆನೋ᳚ರ॒ಯಿಂವ॑ಹತ॒ಮೋತವೀ॒ರಾನಾವಿಶ್ವಾ᳚ನ್ಯಮೃತಾ॒ಸೌಭ॑ಗಾನಿ॒(ಸ್ವಾಹಾ᳚) || 5 || </td>
@@ -1934,7 +1934,7 @@
 <td class='VargaStyle1'>ಅಶ್ವಿ॑ನಾವಾಜಿನೀವಸೂಜು॒ಷೇಥಾಂ᳚ಯ॒ಜ್ಞಮಿ॒ಷ್ಟಯೇ᳚ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸಪ್ತವಧ್ರಿಃ | ಅಶ್ವಿನೌ | ಉಷ್ಣಿಕ್}</span><p>ಹಂ॒ಸಾವಿ॑ವಪತತ॒ಮಾಸು॒ತಾಁ,ಉಪ॒(ಸ್ವಾಹಾ᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಅತ್ರಿ॒ರ್‍ಯದ್ವಾ᳚ಮವ॒ರೋಹ᳚ನ್ನೃ॒ಬೀಸ॒ಮಜೋ᳚ಹವೀ॒ನ್ನಾಧ॑ಮಾನೇವ॒ಯೋಷಾ᳚ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸಪ್ತವಧ್ರಿಃ | ಅಶ್ವಿನೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಶ್ಯೇ॒ನಸ್ಯ॑ಚಿ॒ಜ್ಜವ॑ಸಾ॒ನೂತ॑ನೇ॒ನಾಗ॑ಚ್ಛತಮಶ್ವಿನಾ॒ಶಂತ॑ಮೇನ॒(ಸ್ವಾಹಾ᳚) || 4 || </td>
+<td class='VargaStyle1'>ಅತ್ರಿ॒ರ್‍ಯದ್‌ವಾ᳚ಮವ॒ರೋಹ᳚ನ್ನೃ॒ಬೀಸ॒ಮಜೋ᳚ಹವೀ॒ನ್ನಾಧ॑ಮಾನೇವ॒ಯೋಷಾ᳚ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸಪ್ತವಧ್ರಿಃ | ಅಶ್ವಿನೌ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಶ್ಯೇ॒ನಸ್ಯ॑ಚಿ॒ಜ್ಜವ॑ಸಾ॒ನೂತ॑ನೇ॒ನಾಽಽಗ॑ಚ್ಛತಮಶ್ವಿನಾ॒ಶಂತ॑ಮೇನ॒(ಸ್ವಾಹಾ᳚) || 4 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ವಿಜಿ॑ಹೀಷ್ವವನಸ್ಪತೇ॒ಯೋನಿಃ॒ಸೂಷ್ಯಂ᳚ತ್ಯಾ,ಇವ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸಪ್ತವಧ್ರಿಃ | ಅಶ್ವಿನೌ | ಅನುಷ್ಟುಪ್}</span><p>ಶ್ರು॒ತಂಮೇ᳚,ಅಶ್ವಿನಾ॒ಹವಂ᳚ಸ॒ಪ್ತವ॑ಧ್ರಿಂಚಮುಂಚತ॒‌ಮ್(ಸ್ವಾಹಾ᳚) || 5 || <span class='MantraNumbering'>ವರ್ಗ:20</span></td>
