--- a/Rigveda/SamhitaPatha/Malayalam/Ashtaka/Format3/RVS-Malayalam-F3-A04.html
+++ b/Rigveda/SamhitaPatha/Malayalam/Ashtaka/Format3/RVS-Malayalam-F3-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ഋഗ്വേദ സംഹിതാ (അഷ്ടക: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 10-Jan-2025]</h6>
+<br> [Last updated on: 13-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1697,7 +1697,7 @@
 <td class='VargaStyle2'>തദൃ॒തംപൃ॑ഥിവിബൃ॒ഹച്ഛ്ര॑വഏ॒ഷഋഷീ᳚ണാം | ജ്ര॒യ॒സാ॒നാവരം᳚പൃ॒ഥ്വതി॑ക്ഷരന്തി॒യാമ॑ഭിഃ || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ആയദ്വാ᳚മീയചക്ഷസാ॒മിത്ര॑വ॒യംച॑സൂ॒രയഃ॑ | വ്യചി॑ഷ്ഠേബഹു॒പായ്യേ॒യതേ᳚മഹിസ്വ॒രാജ്യേ᳚ || 6 || </td>
+<td class='VargaStyle2'>ആയദ്‌വാ᳚മീയചക്ഷസാ॒മിത്ര॑വ॒യംച॑സൂ॒രയഃ॑ | വ്യചി॑ഷ്ഠേബഹു॒പായ്യേ॒യതേ᳚മഹിസ്വ॒രാജ്യേ᳚ || 6 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[59] ബളിത്ഥാദേവേതി പഞ്ചർചസ്യ സൂക്തസ്യാത്രേയോയജതോ മിത്രാവരുണാവനുഷ്ടുപ് |<span class='MantraNumbering'>{അഷ്ടക:4, അധ്യായ:4}{മണ്ഡല:5, സൂക്ത:67}{അനുവാക:5, സൂക്ത:11}</td>
@@ -1739,10 +1739,10 @@
 <td class='SuktaLabel'>[61] ത്രീരോചനേതി ചതുരൃചസ്യ സൂക്തസ്യാത്രേയ ഉരുചക്രിർമിത്രാവരുണൗത്രിഷ്ടുപ് |<span class='MantraNumbering'>{അഷ്ടക:4, അധ്യായ:4}{മണ്ഡല:5, സൂക്ത:69}{അനുവാക:5, സൂക്ത:13}</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ത്രീരോ᳚ച॒നാവ॑രുണ॒ത്രീഁരു॒തദ്യൂന്ത്രീണി॑മിത്രധാരയഥോ॒രജാം᳚സി |<p>വാ॒വൃ॒ധാ॒നാവ॒മതിം᳚ക്ഷ॒ത്രിയ॒സ്യാനു᳚വ്ര॒തംരക്ഷ॑മാണാവജു॒ര്യം || 1 || <span class='MantraNumbering'>വർഗ:7</span></td>
+<td class='VargaStyle1'>ത്രീരോ᳚ച॒നാവ॑രുണ॒ത്രീഁരു॒തദ്യൂൻത്രീണി॑മിത്രധാരയഥോ॒രജാം᳚സി |<p>വാ॒വൃ॒ധാ॒നാവ॒മതിം᳚ക്ഷ॒ത്രിയ॒സ്യാഽനു᳚വ്ര॒തംരക്ഷ॑മാണാവജു॒ര്യം || 1 || <span class='MantraNumbering'>വർഗ:7</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ഇരാ᳚വതീർവരുണധേ॒നവോ᳚വാം॒മധു॑മദ്വാം॒സിന്ധ॑വോമിത്രദുഹ്രേ |<p>ത്രയ॑സ്തസ്ഥുർവൃഷ॒ഭാസ॑സ്തിസൃ॒ണാംധി॒ഷണാ᳚നാംരേതോ॒ധാവിദ്യു॒മന്തഃ॑ || 2 || </td>
+<td class='VargaStyle1'>ഇരാ᳚വതീർവരുണധേ॒നവോ᳚വാം॒മധു॑മദ്വാം॒സിന്ധ॑വോമിത്രദുഹ്രേ |<p>ത്രയ॑സ്തസ്ഥുർവൃഷ॒ഭാസ॑സ്തിസൄ॒ണാംധി॒ഷണാ᳚നാംരേതോ॒ധാവിദ്യു॒മന്തഃ॑ || 2 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>പ്രാ॒തർദേ॒വീമദി॑തിംജോഹവീമിമ॒ധ്യന്ദി॑ന॒ഉദി॑താ॒സൂര്യ॑സ്യ |<p>രാ॒യേമി॑ത്രാവരുണാസ॒ർവതാ॒തേളേ᳚തോ॒കായ॒തന॑യായ॒ശംയോഃ || 3 || </td>
@@ -1760,7 +1760,7 @@
 <td class='VargaStyle2'>താവാം᳚സ॒മ്യഗ॑ദ്രുഹ്വാ॒ണേഷ॑മശ്യാമ॒ധായ॑സേ | വ॒യംതേരു॑ദ്രാസ്യാമ || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>പാ॒തംനോ᳚രുദ്രാപാ॒യുഭി॑രു॒തത്രാ᳚യേഥാംസുത്രാ॒ത്രാ | തു॒ര്യാമ॒ദസ്യൂ᳚ന്ത॒നൂഭിഃ॑ || 3 || </td>
+<td class='VargaStyle2'>പാ॒തംനോ᳚രുദ്രാപാ॒യുഭി॑രു॒തത്രാ᳚യേഥാംസുത്രാ॒ത്രാ | തു॒ര്യാമ॒ദസ്യൂ᳚ൻ‌ത॒നൂഭിഃ॑ || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>മാകസ്യാ᳚ദ്ഭുതക്രതൂയ॒ക്ഷംഭു॑ജേമാത॒നൂഭിഃ॑ | മാശേഷ॑സാ॒മാതന॑സാ || 4 || </td>
@@ -1793,40 +1793,40 @@
 <td class='SuktaLabel'>[65] യദദ്യസ്ഥഇതി ദശർചസ്യസൂതസ്യാത്രേയഃ പൗരോശ്വിനാവനുഷ്ടുപ് |<span class='MantraNumbering'>{അഷ്ടക:4, അധ്യായ:4}{മണ്ഡല:5, സൂക്ത:73}{അനുവാക:6, സൂക്ത:1}</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>യദ॒ദ്യസ്ഥഃപ॑രാ॒വതി॒യദ᳚ർവാ॒വത്യ॑ശ്വിനാ | യദ്വാ᳚പു॒രൂപു॑രുഭുജാ॒യദ॒ന്തരി॑ക്ഷ॒ആഗ॑തം || 1 || <span class='MantraNumbering'>വർഗ:11</span></td>
+<td class='VargaStyle1'>യദ॒ദ്യസ്ഥഃപ॑രാ॒വതി॒യദ᳚ർവാ॒വത്യ॑ശ്വിനാ | യദ്‌വാ᳚പു॒രൂപു॑രുഭുജാ॒യദ॒ന്തരി॑ക്ഷ॒ആഗ॑തം || 1 || <span class='MantraNumbering'>വർഗ:11</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ഇ॒ഹത്യാപു॑രു॒ഭൂത॑മാപു॒രൂദംസാം᳚സി॒ബിഭ്ര॑താ | വ॒ര॒സ്യായാ॒മ്യധ്രി॑ഗൂഹു॒വേതു॒വിഷ്ട॑മാഭു॒ജേ || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ഈ॒ർമാന്യദ്വപു॑ഷേ॒വപു॑ശ്ച॒ക്രംരഥ॑സ്യയേമഥുഃ | പര്യ॒ന്യാനാഹു॑ഷായു॒ഗാമ॒ഹ്നാരജാം᳚സിദീയഥഃ || 3 || </td>
+<td class='VargaStyle1'>ഈ॒ർമാന്യദ്‌വപു॑ഷേ॒വപു॑ശ്ച॒ക്രംരഥ॑സ്യയേമഥുഃ | പര്യ॒ന്യാനാഹു॑ഷായു॒ഗാമ॒ഹ്നാരജാം᳚സിദീയഥഃ || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>തദൂ॒ഷുവാ᳚മേ॒നാകൃ॒തംവിശ്വാ॒യദ്വാ॒മനു॒ഷ്ടവേ᳚ | നാനാ᳚ജാ॒താവ॑രേ॒പസാ॒സമ॒സ്മേബന്ധു॒മേയ॑ഥുഃ || 4 || </td>
+<td class='VargaStyle1'>തദൂ॒ഷുവാ᳚മേ॒നാകൃ॒തംവിശ്വാ॒യദ്‌വാ॒മനു॒ഷ്ടവേ᳚ | നാനാ᳚ജാ॒താവ॑രേ॒പസാ॒സമ॒സ്മേബന്ധു॒മേയ॑ഥുഃ || 4 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ആയദ്വാം᳚സൂ॒ര്യാരഥം॒തിഷ്ഠ॑ദ്രഘു॒ഷ്യദം॒സദാ᳚ | പരി॑വാമരു॒ഷാവയോ᳚ഘൃ॒ണാവ॑രന്തആ॒തപഃ॑ || 5 || </td>
+<td class='VargaStyle1'>ആയദ്‌വാം᳚സൂ॒ര്യാരഥം॒തിഷ്ഠ॑ദ്‌രഘു॒ഷ്യദം॒സദാ᳚ | പരി॑വാമരു॒ഷാവയോ᳚ഘൃ॒ണാവ॑രന്തആ॒തപഃ॑ || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>യു॒വോരത്രി॑ശ്ചികേതതി॒നരാ᳚സു॒മ്നേന॒ചേത॑സാ | ഘ॒ർമംയദ്വാ᳚മരേ॒പസം॒നാസ॑ത്യാ॒സ്നാഭു॑ര॒ണ്യതി॑ || 6 || <span class='MantraNumbering'>വർഗ:12</span></td>
+<td class='VargaStyle2'>യു॒വോരത്രി॑ശ്ചികേതതി॒നരാ᳚സു॒മ്നേന॒ചേത॑സാ | ഘ॒ർമംയദ്‌വാ᳚മരേ॒പസം॒നാസ॑ത്യാ॒സ്നാഭു॑ര॒ണ്യതി॑ || 6 || <span class='MantraNumbering'>വർഗ:12</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ഉ॒ഗ്രോവാം᳚കകു॒ഹോയ॒യിഃശൃ॒ണ്വേയാമേ᳚ഷുസന്ത॒നിഃ | യദ്വാം॒ദംസോ᳚ഭിരശ്വി॒നാത്രി᳚ർനരാവ॒വർത॑തി || 7 || </td>
+<td class='VargaStyle2'>ഉ॒ഗ്രോവാം᳚കകു॒ഹോയ॒യിഃശൃ॒ണ്വേയാമേ᳚ഷുസന്ത॒നിഃ | യദ്‌വാം॒ദംസോ᳚ഭിരശ്വി॒നാഽത്രി᳚ർനരാവ॒വർത॑തി || 7 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>മധ്വ॑ഊ॒ഷുമ॑ധൂയുവാ॒രുദ്രാ॒സിഷ॑ക്തിപി॒പ്യുഷീ᳚ | യത്സ॑മു॒ദ്രാതി॒പർഷ॑ഥഃപ॒ക്വാഃപൃക്ഷോ᳚ഭരന്തവാം || 8 || </td>
+<td class='VargaStyle2'>മധ്വ॑ഊ॒ഷുമ॑ധൂയുവാ॒രുദ്രാ॒സിഷ॑ക്തിപി॒പ്യുഷീ᳚ | യത്‌സ॑മു॒ദ്രാതി॒പർഷ॑ഥഃപ॒ക്വാഃപൃക്ഷോ᳚ഭരന്തവാം || 8 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>സ॒ത്യമിദ്വാ,ഉ॑അശ്വിനായു॒വാമാ᳚ഹുർമയോ॒ഭുവാ᳚ | തായാമ᳚ന്യാമ॒ഹൂത॑മാ॒യാമ॒ന്നാമൃ॑ള॒യത്ത॑മാ || 9 || </td>
+<td class='VargaStyle2'>സ॒ത്യമിദ്‌വാ,ഉ॑അശ്വിനായു॒വാമാ᳚ഹുർമയോ॒ഭുവാ᳚ | തായാമ᳚ൻ‌യാമ॒ഹൂത॑മാ॒യാമ॒ന്നാമൃ॑ള॒യത്ത॑മാ || 9 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ഇ॒മാബ്രഹ്മാ᳚ണി॒വർധ॑നാ॒ശ്വിഭ്യാം᳚സന്തു॒ശന്ത॑മാ | യാതക്ഷാ᳚മ॒രഥാഁ᳚,ഇ॒വാവോ᳚ചാമബൃ॒ഹന്നമഃ॑ || 10 || </td>
+<td class='VargaStyle2'>ഇ॒മാബ്രഹ്മാ᳚ണി॒വർധ॑നാ॒ഽശ്വിഭ്യാം᳚സന്തു॒ശന്ത॑മാ | യാതക്ഷാ᳚മ॒രഥാഁ᳚,ഇ॒വാഽവോ᳚ചാമബൃ॒ഹന്നമഃ॑ || 10 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[66] കൂഷ്ഠോദേവാവിതി ദശർചസ്യ സൂക്തസ്യാത്രേയഃ പൗരോശ്വിനാവനുഷ്ടുപ് |<span class='MantraNumbering'>{അഷ്ടക:4, അധ്യായ:4}{മണ്ഡല:5, സൂക്ത:74}{അനുവാക:6, സൂക്ത:2}</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>കൂഷ്ഠോ᳚ദേവാവശ്വിനാ॒ദ്യാദി॒വോമ॑നാവസൂ | തച്ഛ്ര॑വഥോവൃഷണ്വസൂ॒,അത്രി᳚ർവാ॒മാവി॑വാസതി || 1 || <span class='MantraNumbering'>വർഗ:13</span></td>
+<td class='VargaStyle1'>കൂഷ്ഠോ᳚ദേവാവശ്വിനാ॒ഽദ്യാദി॒വോമ॑നാവസൂ | തച്ഛ്ര॑വഥോവൃഷണ്വസൂ॒,അത്രി᳚ർവാ॒മാവി॑വാസതി || 1 || <span class='MantraNumbering'>വർഗ:13</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>കുഹ॒ത്യാകുഹ॒നുശ്രു॒താദി॒വിദേ॒വാനാസ॑ത്യാ | കസ്മി॒ന്നായ॑തഥോ॒ജനേ॒കോവാം᳚ന॒ദീനാം॒സചാ᳚ || 2 || </td>
@@ -1850,7 +1850,7 @@
 <td class='VargaStyle2'>ആവാം॒രഥോ॒രഥാ᳚നാം॒യേഷ്ഠോ᳚യാത്വശ്വിനാ | പു॒രൂചി॑ദസ്മ॒യുസ്തി॒രആം᳚ഗൂ॒ഷോമർത്യേ॒ഷ്വാ || 8 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ശമൂ॒ഷുവാം᳚മധൂയുവാ॒സ്മാക॑മസ്തുചർകൃ॒തിഃ | അ॒ർവാ॒ചീ॒നാവി॑ചേതസാ॒വിഭിഃ॑ശ്യേ॒നേവ॑ദീയതം || 9 || </td>
+<td class='VargaStyle2'>ശമൂ॒ഷുവാം᳚മധൂയുവാ॒ഽസ്മാക॑മസ്തുചർകൃ॒തിഃ | അ॒ർവാ॒ചീ॒നാവി॑ചേതസാ॒വിഭിഃ॑ശ്യേ॒നേവ॑ദീയതം || 9 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>അശ്വി॑നാ॒യദ്ധ॒കർഹി॑ചിച്ഛുശ്രൂ॒യാത॑മി॒മംഹവം᳚ | വസ്വീ᳚രൂ॒ഷുവാം॒ഭുജഃ॑പൃ॒ഞ്ചന്തി॒സുവാം॒പൃചഃ॑ || 10 || </td>
@@ -1889,16 +1889,16 @@
 <td class='SuktaLabel'>[68] ആഭാത്യഗ്നിരിതി പഞ്ചർചസ്യ സൂക്തസ്യ ഭൗമോത്രിരശ്വിനൗത്രിഷ്ടുപ് |<span class='MantraNumbering'>{അഷ്ടക:4, അധ്യായ:4}{മണ്ഡല:5, സൂക്ത:76}{അനുവാക:6, സൂക്ത:4}</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ആഭാ᳚ത്യ॒ഗ്നിരു॒ഷസാ॒മനീ᳚ക॒മുദ്വിപ്രാ᳚ണാംദേവ॒യാവാചോ᳚,അസ്ഥുഃ |<p>അ॒ർവാഞ്ചാ᳚നൂ॒നംര॑ഥ്യേ॒ഹയാ᳚തംപീപി॒വാംസ॑മശ്വിനാഘ॒ർമമച്ഛ॑ || 1 || <span class='MantraNumbering'>വർഗ:17</span></td>
+<td class='VargaStyle1'>ആഭാ᳚ത്യ॒ഗ്നിരു॒ഷസാ॒മനീ᳚ക॒മുദ്‌വിപ്രാ᳚ണാംദേവ॒യാവാചോ᳚,അസ്ഥുഃ |<p>അ॒ർവാഞ്ചാ᳚നൂ॒നംര॑ഥ്യേ॒ഹയാ᳚തംപീപി॒വാംസ॑മശ്വിനാഘ॒ർമമച്ഛ॑ || 1 || <span class='MantraNumbering'>വർഗ:17</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>നസം᳚സ്കൃ॒തംപ്രമി॑മീതോ॒ഗമി॒ഷ്ഠാന്തി॑നൂ॒നമ॒ശ്വിനോപ॑സ്തുതേ॒ഹ |<p>ദിവാ᳚ഭിപി॒ത്വേഽവ॒സാഗ॑മിഷ്ഠാ॒പ്രത്യവ॑ർതിംദാ॒ശുഷേ॒ശംഭ॑വിഷ്ഠാ || 2 || </td>
+<td class='VargaStyle1'>നസം᳚സ്കൃ॒തംപ്രമി॑മീതോ॒ഗമി॒ഷ്ഠാഽന്തി॑നൂ॒നമ॒ശ്വിനോപ॑സ്തുതേ॒ഹ |<p>ദിവാ᳚ഭിപി॒ത്വേഽവ॒സാഗ॑മിഷ്ഠാ॒പ്രത്യവ॑ർതിംദാ॒ശുഷേ॒ശംഭ॑വിഷ്ഠാ || 2 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ഉ॒തായാ᳚തംസംഗ॒വേപ്രാ॒തരഹ്നോ᳚മ॒ധ്യന്ദി॑ന॒ഉദി॑താ॒സൂര്യ॑സ്യ |<p>ദിവാ॒നക്ത॒മവ॑സാ॒ശന്ത॑മേന॒നേദാനീം᳚പീ॒തിര॒ശ്വിനാത॑താന || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ഇ॒ദംഹിവാം᳚പ്ര॒ദിവി॒സ്ഥാന॒മോക॑ഇ॒മേഗൃ॒ഹാ,അ॑ശ്വിനേ॒ദംദു॑രോ॒ണം |<p>ആനോ᳚ദി॒വോബൃ॑ഹ॒തഃപർവ॑താ॒ദാദ്ഭ്യോയാ᳚ത॒മിഷ॒മൂർജം॒വഹ᳚ന്താ || 4 || </td>
+<td class='VargaStyle1'>ഇ॒ദംഹിവാം᳚പ്ര॒ദിവി॒സ്ഥാന॒മോക॑ഇ॒മേഗൃ॒ഹാ,അ॑ശ്വിനേ॒ദംദു॑രോ॒ണം |<p>ആനോ᳚ദി॒വോബൃ॑ഹ॒തഃപർവ॑താ॒ദാഽദ്ഭ്യോയാ᳚ത॒മിഷ॒മൂർജം॒വഹ᳚ന്താ || 4 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>സമ॒ശ്വിനോ॒രവ॑സാ॒നൂത॑നേനമയോ॒ഭുവാ᳚സു॒പ്രണീ᳚തീഗമേമ |<p>ആനോ᳚ര॒യിംവ॑ഹത॒മോതവീ॒രാനാവിശ്വാ᳚ന്യമൃതാ॒സൗഭ॑ഗാനി || 5 || </td>
@@ -1910,13 +1910,13 @@
 <td class='VargaStyle2'>പ്രാ॒ത॒ര്യാവാ᳚ണാപ്രഥ॒മായ॑ജധ്വംപു॒രാഗൃധ്രാ॒ദര॑രുഷഃപിബാതഃ |<p>പ്രാ॒തർഹിയ॒ജ്ഞമ॒ശ്വിനാ᳚ദ॒ധാതേ॒പ്രശം᳚സന്തിക॒വയഃ॑പൂർവ॒ഭാജഃ॑ || 1 || <span class='MantraNumbering'>വർഗ:18</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>പ്രാ॒തര്യ॑ജധ്വമ॒ശ്വിനാ᳚ഹിനോത॒നസാ॒യമ॑സ്തിദേവ॒യാ,അജു॑ഷ്ടം |<p>ഉ॒താന്യോ,അ॒സ്മദ്യ॑ജതേ॒വിചാവഃ॒പൂർവഃ॑പൂർവോ॒യജ॑മാനോ॒വനീ᳚യാൻ || 2 || </td>
+<td class='VargaStyle2'>പ്രാ॒തര്യ॑ജധ്വമ॒ശ്വിനാ᳚ഹിനോത॒നസാ॒യമ॑സ്തിദേവ॒യാ,അജു॑ഷ്ടം |<p>ഉ॒താന്യോ,അ॒സ്മദ്‌യ॑ജതേ॒വിചാവഃ॒പൂർവഃ॑പൂർവോ॒യജ॑മാനോ॒വനീ᳚യാൻ || 2 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ഹിര᳚ണ്യത്വ॒ങ്മധു॑വർണോഘൃ॒തസ്നുഃ॒പൃക്ഷോ॒വഹ॒ന്നാരഥോ᳚വർതതേവാം |<p>മനോ᳚ജവാ,അശ്വിനാ॒വാത॑രംഹാ॒യേനാ᳚തിയാ॒ഥോദു॑രി॒താനി॒വിശ്വാ᳚ || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>യോഭൂയി॑ഷ്ഠം॒നാസ॑ത്യാഭ്യാംവി॒വേഷ॒ചനി॑ഷ്ഠംപി॒ത്വോരര॑തേവിഭാ॒ഗേ |<p>സതോ॒കമ॑സ്യപീപര॒ച്ഛമീ᳚ഭി॒രനൂ᳚ർധ്വഭാസഃ॒സദ॒മിത്തു॑തുര്യാത് || 4 || </td>
+<td class='VargaStyle2'>യോഭൂയി॑ഷ്ഠം॒നാസ॑ത്യാഭ്യാംവി॒വേഷ॒ചനി॑ഷ്ഠംപി॒ത്വോരര॑തേവിഭാ॒ഗേ |<p>സതോ॒കമ॑സ്യപീപര॒ച്ഛമീ᳚ഭി॒രനൂ᳚ർധ്വഭാസഃ॒സദ॒മിത്‌തു॑തുര്യാത് || 4 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>സമ॒ശ്വിനോ॒രവ॑സാ॒നൂത॑നേനമയോ॒ഭുവാ᳚സു॒പ്രണീ᳚തീഗമേമ |<p>ആനോ᳚ര॒യിംവ॑ഹത॒മോതവീ॒രാനാവിശ്വാ᳚ന്യമൃതാ॒സൗഭ॑ഗാനി || 5 || </td>
@@ -1934,7 +1934,7 @@
 <td class='VargaStyle1'>അശ്വി॑നാവാജിനീവസൂജു॒ഷേഥാം᳚യ॒ജ്ഞമി॒ഷ്ടയേ᳚ | ഹം॒സാവി॑വപതത॒മാസു॒താഁ,ഉപ॑ || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>അത്രി॒ര്യദ്വാ᳚മവ॒രോഹ᳚ന്നൃ॒ബീസ॒മജോ᳚ഹവീ॒ന്നാധ॑മാനേവ॒യോഷാ᳚ |<p>ശ്യേ॒നസ്യ॑ചി॒ജ്ജവ॑സാ॒നൂത॑നേ॒നാഗ॑ച്ഛതമശ്വിനാ॒ശന്ത॑മേന || 4 || </td>
+<td class='VargaStyle1'>അത്രി॒ര്യദ്‌വാ᳚മവ॒രോഹ᳚ന്നൃ॒ബീസ॒മജോ᳚ഹവീ॒ന്നാധ॑മാനേവ॒യോഷാ᳚ |<p>ശ്യേ॒നസ്യ॑ചി॒ജ്ജവ॑സാ॒നൂത॑നേ॒നാഽഽഗ॑ച്ഛതമശ്വിനാ॒ശന്ത॑മേന || 4 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>വിജി॑ഹീഷ്വവനസ്പതേ॒യോനിഃ॒സൂഷ്യ᳚ന്ത്യാ,ഇവ | ശ്രു॒തംമേ᳚,അശ്വിനാ॒ഹവം᳚സ॒പ്തവ॑ധ്രിംചമുഞ്ചതം || 5 || <span class='MantraNumbering'>വർഗ:20</span></td>
