--- a/Rigveda/SamhitaPatha/Malayalam/Mandala/Format4/RVS-Malayalam-F4-M05.html
+++ b/Rigveda/SamhitaPatha/Malayalam/Mandala/Format4/RVS-Malayalam-F4-M05.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ഋഗ്വേദ സംഹിതാ (മണ്ഡല: 05) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 10-Jan-2025]</h6>
+<br> [Last updated on: 13-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -2042,7 +2042,7 @@
 <td class='VargaStyle2'>തദൃ॒തംപൃ॑ഥിവിബൃ॒ഹച്ഛ്ര॑വഏ॒ഷഋഷീ᳚ണാം |<span class='RishiDevChandas'>{ആത്രേയോ രാതഹവ്യഃ | മിത്രാവരുണൗ | അനുഷ്ടുപ്}</span><p>ജ്ര॒യ॒സാ॒നാവരം᳚പൃ॒ഥ്വതി॑ക്ഷരന്തി॒യാമ॑ഭിഃ॒(സ്വാഹാ᳚) || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ആയദ്വാ᳚മീയചക്ഷസാ॒മിത്ര॑വ॒യംച॑സൂ॒രയഃ॑ |<span class='RishiDevChandas'>{ആത്രേയോ രാതഹവ്യഃ | മിത്രാവരുണൗ | അനുഷ്ടുപ്}</span><p>വ്യചി॑ഷ്ഠേബഹു॒പായ്യേ॒യതേ᳚മഹിസ്വ॒രാജ്യേ॒(സ്വാഹാ᳚) || 6 || </td>
+<td class='VargaStyle2'>ആയദ്‌വാ᳚മീയചക്ഷസാ॒മിത്ര॑വ॒യംച॑സൂ॒രയഃ॑ |<span class='RishiDevChandas'>{ആത്രേയോ രാതഹവ്യഃ | മിത്രാവരുണൗ | അനുഷ്ടുപ്}</span><p>വ്യചി॑ഷ്ഠേബഹു॒പായ്യേ॒യതേ᳚മഹിസ്വ॒രാജ്യേ॒(സ്വാഹാ᳚) || 6 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[67] ബളിത്ഥാദേവേതി പഞ്ചർചസ്യ സൂക്തസ്യാത്രേയോയജതോ മിത്രാവരുണാവനുഷ്ടുപ് |<span class='MantraNumbering'>{മണ്ഡല:5, സൂക്ത:67}{അനുവാക:5, സൂക്ത:11}{അഷ്ടക:4, അധ്യായ:4}</span>
@@ -2087,10 +2087,10 @@
 </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ത്രീരോ᳚ച॒നാവ॑രുണ॒ത്രീഁരു॒തദ്യൂന്ത്രീണി॑മിത്രധാരയഥോ॒രജാം᳚സി |<span class='RishiDevChandas'>{ആത്രേയോ ഉരൂചക്രിഃ | മിത്രാവരുണൗ | ത്രിഷ്ടുപ്}</span><p>വാ॒വൃ॒ധാ॒നാവ॒മതിം᳚ക്ഷ॒ത്രിയ॒സ്യാനു᳚വ്ര॒തംരക്ഷ॑മാണാവജു॒ര്യം(സ്വാഹാ᳚) || 1 || <span class='MantraNumbering'>വർഗ:7</span></td>
+<td class='VargaStyle1'>ത്രീരോ᳚ച॒നാവ॑രുണ॒ത്രീഁരു॒തദ്യൂൻത്രീണി॑മിത്രധാരയഥോ॒രജാം᳚സി |<span class='RishiDevChandas'>{ആത്രേയോ ഉരൂചക്രിഃ | മിത്രാവരുണൗ | ത്രിഷ്ടുപ്}</span><p>വാ॒വൃ॒ധാ॒നാവ॒മതിം᳚ക്ഷ॒ത്രിയ॒സ്യാഽനു᳚വ്ര॒തംരക്ഷ॑മാണാവജു॒ര്യം(സ്വാഹാ᳚) || 1 || <span class='MantraNumbering'>വർഗ:7</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ഇരാ᳚വതീർവരുണധേ॒നവോ᳚വാം॒മധു॑മദ്വാം॒സിന്ധ॑വോമിത്രദുഹ്രേ |<span class='RishiDevChandas'>{ആത്രേയോ ഉരൂചക്രിഃ | മിത്രാവരുണൗ | ത്രിഷ്ടുപ്}</span><p>ത്രയ॑സ്തസ്ഥുർവൃഷ॒ഭാസ॑സ്തിസൃ॒ണാംധി॒ഷണാ᳚നാംരേതോ॒ധാവിദ്യു॒മന്തഃ॒(സ്വാഹാ᳚) || 2 || </td>
+<td class='VargaStyle1'>ഇരാ᳚വതീർവരുണധേ॒നവോ᳚വാം॒മധു॑മദ്വാം॒സിന്ധ॑വോമിത്രദുഹ്രേ |<span class='RishiDevChandas'>{ആത്രേയോ ഉരൂചക്രിഃ | മിത്രാവരുണൗ | ത്രിഷ്ടുപ്}</span><p>ത്രയ॑സ്തസ്ഥുർവൃഷ॒ഭാസ॑സ്തിസൄ॒ണാംധി॒ഷണാ᳚നാംരേതോ॒ധാവിദ്യു॒മന്തഃ॒(സ്വാഹാ᳚) || 2 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>പ്രാ॒തർദേ॒വീമദി॑തിംജോഹവീമിമ॒ധ്യന്ദി॑ന॒ഉദി॑താ॒സൂര്യ॑സ്യ |<span class='RishiDevChandas'>{ആത്രേയോ ഉരൂചക്രിഃ | മിത്രാവരുണൗ | ത്രിഷ്ടുപ്}</span><p>രാ॒യേമി॑ത്രാവരുണാസ॒ർവതാ॒തേളേ᳚തോ॒കായ॒തന॑യായ॒ശംയോഃ(സ്വാഹാ᳚) || 3 || </td>
@@ -2109,7 +2109,7 @@
 <td class='VargaStyle2'>താവാം᳚സ॒മ്യഗ॑ദ്രുഹ്വാ॒ണേഷ॑മശ്യാമ॒ധായ॑സേ |<span class='RishiDevChandas'>{ആത്രേയോ ഉരൂചക്രിഃ | മിത്രാവരുണൗ | ഗായത്രീ}</span><p>വ॒യംതേരു॑ദ്രാസ്യാമ॒(സ്വാഹാ᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>പാ॒തംനോ᳚രുദ്രാപാ॒യുഭി॑രു॒തത്രാ᳚യേഥാംസുത്രാ॒ത്രാ |<span class='RishiDevChandas'>{ആത്രേയോ ഉരൂചക്രിഃ | മിത്രാവരുണൗ | ഗായത്രീ}</span><p>തു॒ര്യാമ॒ദസ്യൂ᳚ന്ത॒നൂഭിഃ॒(സ്വാഹാ᳚) || 3 || </td>
+<td class='VargaStyle2'>പാ॒തംനോ᳚രുദ്രാപാ॒യുഭി॑രു॒തത്രാ᳚യേഥാംസുത്രാ॒ത്രാ |<span class='RishiDevChandas'>{ആത്രേയോ ഉരൂചക്രിഃ | മിത്രാവരുണൗ | ഗായത്രീ}</span><p>തു॒ര്യാമ॒ദസ്യൂ᳚ൻ‌ത॒നൂഭിഃ॒(സ്വാഹാ᳚) || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>മാകസ്യാ᳚ദ്ഭുതക്രതൂയ॒ക്ഷംഭു॑ജേമാത॒നൂഭിഃ॑ |<span class='RishiDevChandas'>{ആത്രേയോ ഉരൂചക്രിഃ | മിത്രാവരുണൗ | ഗായത്രീ}</span><p>മാശേഷ॑സാ॒മാതന॑സാ॒(സ്വാഹാ᳚) || 4 || </td>
@@ -2145,41 +2145,41 @@
 </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>യദ॒ദ്യസ്ഥഃപ॑രാ॒വതി॒യദ᳚ർവാ॒വത്യ॑ശ്വിനാ |<span class='RishiDevChandas'>{ആത്രേയഃ പൗരഃ | അശ്വിനൗ | അനുഷ്ടുപ്}</span><p>യദ്വാ᳚പു॒രൂപു॑രുഭുജാ॒യദ॒ന്തരി॑ക്ഷ॒ആഗ॑ത॒‌മ്(സ്വാഹാ᳚) || 1 || <span class='MantraNumbering'>വർഗ:11</span></td>
+<td class='VargaStyle1'>യദ॒ദ്യസ്ഥഃപ॑രാ॒വതി॒യദ᳚ർവാ॒വത്യ॑ശ്വിനാ |<span class='RishiDevChandas'>{ആത്രേയഃ പൗരഃ | അശ്വിനൗ | അനുഷ്ടുപ്}</span><p>യദ്‌വാ᳚പു॒രൂപു॑രുഭുജാ॒യദ॒ന്തരി॑ക്ഷ॒ആഗ॑ത॒‌മ്(സ്വാഹാ᳚) || 1 || <span class='MantraNumbering'>വർഗ:11</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ഇ॒ഹത്യാപു॑രു॒ഭൂത॑മാപു॒രൂദംസാം᳚സി॒ബിഭ്ര॑താ |<span class='RishiDevChandas'>{ആത്രേയഃ പൗരഃ | അശ്വിനൗ | അനുഷ്ടുപ്}</span><p>വ॒ര॒സ്യായാ॒മ്യധ്രി॑ഗൂഹു॒വേതു॒വിഷ്ട॑മാഭു॒ജേ(സ്വാഹാ᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ഈ॒ർമാന്യദ്വപു॑ഷേ॒വപു॑ശ്ച॒ക്രംരഥ॑സ്യയേമഥുഃ |<span class='RishiDevChandas'>{ആത്രേയഃ പൗരഃ | അശ്വിനൗ | അനുഷ്ടുപ്}</span><p>പര്യ॒ന്യാനാഹു॑ഷായു॒ഗാമ॒ഹ്നാരജാം᳚സിദീയഥഃ॒(സ്വാഹാ᳚) || 3 || </td>
+<td class='VargaStyle1'>ഈ॒ർമാന്യദ്‌വപു॑ഷേ॒വപു॑ശ്ച॒ക്രംരഥ॑സ്യയേമഥുഃ |<span class='RishiDevChandas'>{ആത്രേയഃ പൗരഃ | അശ്വിനൗ | അനുഷ്ടുപ്}</span><p>പര്യ॒ന്യാനാഹു॑ഷായു॒ഗാമ॒ഹ്നാരജാം᳚സിദീയഥഃ॒(സ്വാഹാ᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>തദൂ॒ഷുവാ᳚മേ॒നാകൃ॒തംവിശ്വാ॒യദ്വാ॒മനു॒ഷ്ടവേ᳚ |<span class='RishiDevChandas'>{ആത്രേയഃ പൗരഃ | അശ്വിനൗ | അനുഷ്ടുപ്}</span><p>നാനാ᳚ജാ॒താവ॑രേ॒പസാ॒സമ॒സ്മേബന്ധു॒മേയ॑ഥുഃ॒(സ്വാഹാ᳚) || 4 || </td>
+<td class='VargaStyle1'>തദൂ॒ഷുവാ᳚മേ॒നാകൃ॒തംവിശ്വാ॒യദ്‌വാ॒മനു॒ഷ്ടവേ᳚ |<span class='RishiDevChandas'>{ആത്രേയഃ പൗരഃ | അശ്വിനൗ | അനുഷ്ടുപ്}</span><p>നാനാ᳚ജാ॒താവ॑രേ॒പസാ॒സമ॒സ്മേബന്ധു॒മേയ॑ഥുഃ॒(സ്വാഹാ᳚) || 4 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ആയദ്വാം᳚സൂ॒ര്യാരഥം॒തിഷ്ഠ॑ദ്രഘു॒ഷ്യദം॒സദാ᳚ |<span class='RishiDevChandas'>{ആത്രേയഃ പൗരഃ | അശ്വിനൗ | അനുഷ്ടുപ്}</span><p>പരി॑വാമരു॒ഷാവയോ᳚ഘൃ॒ണാവ॑രന്തആ॒തപഃ॒(സ്വാഹാ᳚) || 5 || </td>
+<td class='VargaStyle1'>ആയദ്‌വാം᳚സൂ॒ര്യാരഥം॒തിഷ്ഠ॑ദ്‌രഘു॒ഷ്യദം॒സദാ᳚ |<span class='RishiDevChandas'>{ആത്രേയഃ പൗരഃ | അശ്വിനൗ | അനുഷ്ടുപ്}</span><p>പരി॑വാമരു॒ഷാവയോ᳚ഘൃ॒ണാവ॑രന്തആ॒തപഃ॒(സ്വാഹാ᳚) || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>യു॒വോരത്രി॑ശ്ചികേതതി॒നരാ᳚സു॒മ്നേന॒ചേത॑സാ |<span class='RishiDevChandas'>{ആത്രേയഃ പൗരഃ | അശ്വിനൗ | അനുഷ്ടുപ്}</span><p>ഘ॒ർമംയദ്വാ᳚മരേ॒പസം॒നാസ॑ത്യാ॒സ്നാഭു॑ര॒ണ്യതി॒(സ്വാഹാ᳚) || 6 || <span class='MantraNumbering'>വർഗ:12</span></td>
+<td class='VargaStyle2'>യു॒വോരത്രി॑ശ്ചികേതതി॒നരാ᳚സു॒മ്നേന॒ചേത॑സാ |<span class='RishiDevChandas'>{ആത്രേയഃ പൗരഃ | അശ്വിനൗ | അനുഷ്ടുപ്}</span><p>ഘ॒ർമംയദ്‌വാ᳚മരേ॒പസം॒നാസ॑ത്യാ॒സ്നാഭു॑ര॒ണ്യതി॒(സ്വാഹാ᳚) || 6 || <span class='MantraNumbering'>വർഗ:12</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ഉ॒ഗ്രോവാം᳚കകു॒ഹോയ॒യിഃശൃ॒ണ്വേയാമേ᳚ഷുസന്ത॒നിഃ |<span class='RishiDevChandas'>{ആത്രേയഃ പൗരഃ | അശ്വിനൗ | അനുഷ്ടുപ്}</span><p>യദ്വാം॒ദംസോ᳚ഭിരശ്വി॒നാത്രി᳚ർനരാവ॒വർത॑തി॒(സ്വാഹാ᳚) || 7 || </td>
+<td class='VargaStyle2'>ഉ॒ഗ്രോവാം᳚കകു॒ഹോയ॒യിഃശൃ॒ണ്വേയാമേ᳚ഷുസന്ത॒നിഃ |<span class='RishiDevChandas'>{ആത്രേയഃ പൗരഃ | അശ്വിനൗ | അനുഷ്ടുപ്}</span><p>യദ്‌വാം॒ദംസോ᳚ഭിരശ്വി॒നാഽത്രി᳚ർനരാവ॒വർത॑തി॒(സ്വാഹാ᳚) || 7 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>മധ്വ॑ഊ॒ഷുമ॑ധൂയുവാ॒രുദ്രാ॒സിഷ॑ക്തിപി॒പ്യുഷീ᳚ |<span class='RishiDevChandas'>{ആത്രേയഃ പൗരഃ | അശ്വിനൗ | അനുഷ്ടുപ്}</span><p>യത്സ॑മു॒ദ്രാതി॒പർഷ॑ഥഃപ॒ക്വാഃപൃക്ഷോ᳚ഭരന്തവാ॒‌മ്(സ്വാഹാ᳚) || 8 || </td>
+<td class='VargaStyle2'>മധ്വ॑ഊ॒ഷുമ॑ധൂയുവാ॒രുദ്രാ॒സിഷ॑ക്തിപി॒പ്യുഷീ᳚ |<span class='RishiDevChandas'>{ആത്രേയഃ പൗരഃ | അശ്വിനൗ | അനുഷ്ടുപ്}</span><p>യത്‌സ॑മു॒ദ്രാതി॒പർഷ॑ഥഃപ॒ക്വാഃപൃക്ഷോ᳚ഭരന്തവാ॒‌മ്(സ്വാഹാ᳚) || 8 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>സ॒ത്യമിദ്വാ,ഉ॑അശ്വിനായു॒വാമാ᳚ഹുർമയോ॒ഭുവാ᳚ |<span class='RishiDevChandas'>{ആത്രേയഃ പൗരഃ | അശ്വിനൗ | അനുഷ്ടുപ്}</span><p>തായാമ᳚ന്യാമ॒ഹൂത॑മാ॒യാമ॒ന്നാമൃ॑ള॒യത്ത॑മാ॒(സ്വാഹാ᳚) || 9 || </td>
+<td class='VargaStyle2'>സ॒ത്യമിദ്‌വാ,ഉ॑അശ്വിനായു॒വാമാ᳚ഹുർമയോ॒ഭുവാ᳚ |<span class='RishiDevChandas'>{ആത്രേയഃ പൗരഃ | അശ്വിനൗ | അനുഷ്ടുപ്}</span><p>തായാമ᳚ൻ‌യാമ॒ഹൂത॑മാ॒യാമ॒ന്നാമൃ॑ള॒യത്ത॑മാ॒(സ്വാഹാ᳚) || 9 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ഇ॒മാബ്രഹ്മാ᳚ണി॒വർധ॑നാ॒ശ്വിഭ്യാം᳚സന്തു॒ശന്ത॑മാ |<span class='RishiDevChandas'>{ആത്രേയഃ പൗരഃ | അശ്വിനൗ | അനുഷ്ടുപ്}</span><p>യാതക്ഷാ᳚മ॒രഥാഁ᳚,ഇ॒വാവോ᳚ചാമബൃ॒ഹന്നമഃ॒(സ്വാഹാ᳚) || 10 || </td>
+<td class='VargaStyle2'>ഇ॒മാബ്രഹ്മാ᳚ണി॒വർധ॑നാ॒ഽശ്വിഭ്യാം᳚സന്തു॒ശന്ത॑മാ |<span class='RishiDevChandas'>{ആത്രേയഃ പൗരഃ | അശ്വിനൗ | അനുഷ്ടുപ്}</span><p>യാതക്ഷാ᳚മ॒രഥാഁ᳚,ഇ॒വാഽവോ᳚ചാമബൃ॒ഹന്നമഃ॒(സ്വാഹാ᳚) || 10 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[74] കൂഷ്ഠോദേവാവിതി ദശർചസ്യ സൂക്തസ്യാത്രേയഃ പൗരോശ്വിനാവനുഷ്ടുപ് |<span class='MantraNumbering'>{മണ്ഡല:5, സൂക്ത:74}{അനുവാക:6, സൂക്ത:2}{അഷ്ടക:4, അധ്യായ:4}</span>
 </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>കൂഷ്ഠോ᳚ദേവാവശ്വിനാ॒ദ്യാദി॒വോമ॑നാവസൂ |<span class='RishiDevChandas'>{ആത്രേയഃ പൗരഃ | അശ്വിനൗ | അനുഷ്ടുപ്}</span><p>തച്ഛ്ര॑വഥോവൃഷണ്വസൂ॒,അത്രി᳚ർവാ॒മാവി॑വാസതി॒(സ്വാഹാ᳚) || 1 || <span class='MantraNumbering'>വർഗ:13</span></td>
+<td class='VargaStyle1'>കൂഷ്ഠോ᳚ദേവാവശ്വിനാ॒ഽദ്യാദി॒വോമ॑നാവസൂ |<span class='RishiDevChandas'>{ആത്രേയഃ പൗരഃ | അശ്വിനൗ | അനുഷ്ടുപ്}</span><p>തച്ഛ്ര॑വഥോവൃഷണ്വസൂ॒,അത്രി᳚ർവാ॒മാവി॑വാസതി॒(സ്വാഹാ᳚) || 1 || <span class='MantraNumbering'>വർഗ:13</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>കുഹ॒ത്യാകുഹ॒നുശ്രു॒താദി॒വിദേ॒വാനാസ॑ത്യാ |<span class='RishiDevChandas'>{ആത്രേയഃ പൗരഃ | അശ്വിനൗ | അനുഷ്ടുപ്}</span><p>കസ്മി॒ന്നായ॑തഥോ॒ജനേ॒കോവാം᳚ന॒ദീനാം॒സചാ॒(സ്വാഹാ᳚) || 2 || </td>
@@ -2203,7 +2203,7 @@
 <td class='VargaStyle2'>ആവാം॒രഥോ॒രഥാ᳚നാം॒യേഷ്ഠോ᳚യാത്വശ്വിനാ |<span class='RishiDevChandas'>{ആത്രേയഃ പൗരഃ | അശ്വിനൗ | അനുഷ്ടുപ്}</span><p>പു॒രൂചി॑ദസ്മ॒യുസ്തി॒രആം᳚ഗൂ॒ഷോമർത്യേ॒ഷ്വാ(സ്വാഹാ᳚) || 8 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ശമൂ॒ഷുവാം᳚മധൂയുവാ॒സ്മാക॑മസ്തുചർകൃ॒തിഃ |<span class='RishiDevChandas'>{ആത്രേയഃ പൗരഃ | അശ്വിനൗ | അനുഷ്ടുപ്}</span><p>അ॒ർവാ॒ചീ॒നാവി॑ചേതസാ॒വിഭിഃ॑ശ്യേ॒നേവ॑ദീയത॒‌മ്(സ്വാഹാ᳚) || 9 || </td>
+<td class='VargaStyle2'>ശമൂ॒ഷുവാം᳚മധൂയുവാ॒ഽസ്മാക॑മസ്തുചർകൃ॒തിഃ |<span class='RishiDevChandas'>{ആത്രേയഃ പൗരഃ | അശ്വിനൗ | അനുഷ്ടുപ്}</span><p>അ॒ർവാ॒ചീ॒നാവി॑ചേതസാ॒വിഭിഃ॑ശ്യേ॒നേവ॑ദീയത॒‌മ്(സ്വാഹാ᳚) || 9 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>അശ്വി॑നാ॒യദ്ധ॒കർഹി॑ചിച്ഛുശ്രൂ॒യാത॑മി॒മംഹവം᳚ |<span class='RishiDevChandas'>{ആത്രേയഃ പൗരഃ | അശ്വിനൗ | അനുഷ്ടുപ്}</span><p>വസ്വീ᳚രൂ॒ഷുവാം॒ഭുജഃ॑പൃ॒ഞ്ചന്തി॒സുവാം॒പൃചഃ॒(സ്വാഹാ᳚) || 10 || </td>
@@ -2244,16 +2244,16 @@
 </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ആഭാ᳚ത്യ॒ഗ്നിരു॒ഷസാ॒മനീ᳚ക॒മുദ്വിപ്രാ᳚ണാംദേവ॒യാവാചോ᳚,അസ്ഥുഃ |<span class='RishiDevChandas'>{ഭൗമോത്രിഃ | അശ്വിനൗ | ത്രിഷ്ടുപ്}</span><p>അ॒ർവാഞ്ചാ᳚നൂ॒നംര॑ഥ്യേ॒ഹയാ᳚തംപീപി॒വാംസ॑മശ്വിനാഘ॒ർമമച്ഛ॒(സ്വാഹാ᳚) || 1 || <span class='MantraNumbering'>വർഗ:17</span></td>
+<td class='VargaStyle1'>ആഭാ᳚ത്യ॒ഗ്നിരു॒ഷസാ॒മനീ᳚ക॒മുദ്‌വിപ്രാ᳚ണാംദേവ॒യാവാചോ᳚,അസ്ഥുഃ |<span class='RishiDevChandas'>{ഭൗമോത്രിഃ | അശ്വിനൗ | ത്രിഷ്ടുപ്}</span><p>അ॒ർവാഞ്ചാ᳚നൂ॒നംര॑ഥ്യേ॒ഹയാ᳚തംപീപി॒വാംസ॑മശ്വിനാഘ॒ർമമച്ഛ॒(സ്വാഹാ᳚) || 1 || <span class='MantraNumbering'>വർഗ:17</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>നസം᳚സ്കൃ॒തംപ്രമി॑മീതോ॒ഗമി॒ഷ്ഠാന്തി॑നൂ॒നമ॒ശ്വിനോപ॑സ്തുതേ॒ഹ |<span class='RishiDevChandas'>{ഭൗമോത്രിഃ | അശ്വിനൗ | ത്രിഷ്ടുപ്}</span><p>ദിവാ᳚ഭിപി॒ത്വേഽവ॒സാഗ॑മിഷ്ഠാ॒പ്രത്യവ॑ർതിംദാ॒ശുഷേ॒ശംഭ॑വിഷ്ഠാ॒(സ്വാഹാ᳚) || 2 || </td>
+<td class='VargaStyle1'>നസം᳚സ്കൃ॒തംപ്രമി॑മീതോ॒ഗമി॒ഷ്ഠാഽന്തി॑നൂ॒നമ॒ശ്വിനോപ॑സ്തുതേ॒ഹ |<span class='RishiDevChandas'>{ഭൗമോത്രിഃ | അശ്വിനൗ | ത്രിഷ്ടുപ്}</span><p>ദിവാ᳚ഭിപി॒ത്വേഽവ॒സാഗ॑മിഷ്ഠാ॒പ്രത്യവ॑ർതിംദാ॒ശുഷേ॒ശംഭ॑വിഷ്ഠാ॒(സ്വാഹാ᳚) || 2 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ഉ॒തായാ᳚തംസംഗ॒വേപ്രാ॒തരഹ്നോ᳚മ॒ധ്യന്ദി॑ന॒ഉദി॑താ॒സൂര്യ॑സ്യ |<span class='RishiDevChandas'>{ഭൗമോത്രിഃ | അശ്വിനൗ | ത്രിഷ്ടുപ്}</span><p>ദിവാ॒നക്ത॒മവ॑സാ॒ശന്ത॑മേന॒നേദാനീം᳚പീ॒തിര॒ശ്വിനാത॑താന॒(സ്വാഹാ᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ഇ॒ദംഹിവാം᳚പ്ര॒ദിവി॒സ്ഥാന॒മോക॑ഇ॒മേഗൃ॒ഹാ,അ॑ശ്വിനേ॒ദംദു॑രോ॒ണം |<span class='RishiDevChandas'>{ഭൗമോത്രിഃ | അശ്വിനൗ | ത്രിഷ്ടുപ്}</span><p>ആനോ᳚ദി॒വോബൃ॑ഹ॒തഃപർവ॑താ॒ദാദ്ഭ്യോയാ᳚ത॒മിഷ॒മൂർജം॒വഹ᳚ന്താ॒(സ്വാഹാ᳚) || 4 || </td>
+<td class='VargaStyle1'>ഇ॒ദംഹിവാം᳚പ്ര॒ദിവി॒സ്ഥാന॒മോക॑ഇ॒മേഗൃ॒ഹാ,അ॑ശ്വിനേ॒ദംദു॑രോ॒ണം |<span class='RishiDevChandas'>{ഭൗമോത്രിഃ | അശ്വിനൗ | ത്രിഷ്ടുപ്}</span><p>ആനോ᳚ദി॒വോബൃ॑ഹ॒തഃപർവ॑താ॒ദാഽദ്ഭ്യോയാ᳚ത॒മിഷ॒മൂർജം॒വഹ᳚ന്താ॒(സ്വാഹാ᳚) || 4 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>സമ॒ശ്വിനോ॒രവ॑സാ॒നൂത॑നേനമയോ॒ഭുവാ᳚സു॒പ്രണീ᳚തീഗമേമ |<span class='RishiDevChandas'>{ഭൗമോത്രിഃ | അശ്വിനൗ | ത്രിഷ്ടുപ്}</span><p>ആനോ᳚ര॒യിംവ॑ഹത॒മോതവീ॒രാനാവിശ്വാ᳚ന്യമൃതാ॒സൗഭ॑ഗാനി॒(സ്വാഹാ᳚) || 5 || </td>
@@ -2266,13 +2266,13 @@
 <td class='VargaStyle2'>പ്രാ॒ത॒ര്യാവാ᳚ണാപ്രഥ॒മായ॑ജധ്വംപു॒രാഗൃധ്രാ॒ദര॑രുഷഃപിബാതഃ |<span class='RishiDevChandas'>{ഭൗമോത്രിഃ | അശ്വിനൗ | ത്രിഷ്ടുപ്}</span><p>പ്രാ॒തർഹിയ॒ജ്ഞമ॒ശ്വിനാ᳚ദ॒ധാതേ॒പ്രശം᳚സന്തിക॒വയഃ॑പൂർവ॒ഭാജഃ॒(സ്വാഹാ᳚) || 1 || <span class='MantraNumbering'>വർഗ:18</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>പ്രാ॒തര്യ॑ജധ്വമ॒ശ്വിനാ᳚ഹിനോത॒നസാ॒യമ॑സ്തിദേവ॒യാ,അജു॑ഷ്ടം |<span class='RishiDevChandas'>{ഭൗമോത്രിഃ | അശ്വിനൗ | ത്രിഷ്ടുപ്}</span><p>ഉ॒താന്യോ,അ॒സ്മദ്യ॑ജതേ॒വിചാവഃ॒പൂർവഃ॑പൂർവോ॒യജ॑മാനോ॒വനീ᳚യാ॒‌ന്(സ്വാഹാ᳚) || 2 || </td>
+<td class='VargaStyle2'>പ്രാ॒തര്യ॑ജധ്വമ॒ശ്വിനാ᳚ഹിനോത॒നസാ॒യമ॑സ്തിദേവ॒യാ,അജു॑ഷ്ടം |<span class='RishiDevChandas'>{ഭൗമോത്രിഃ | അശ്വിനൗ | ത്രിഷ്ടുപ്}</span><p>ഉ॒താന്യോ,അ॒സ്മദ്‌യ॑ജതേ॒വിചാവഃ॒പൂർവഃ॑പൂർവോ॒യജ॑മാനോ॒വനീ᳚യാ॒‌ന്(സ്വാഹാ᳚) || 2 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ഹിര᳚ണ്യത്വ॒ങ്മധു॑വർണോഘൃ॒തസ്നുഃ॒പൃക്ഷോ॒വഹ॒ന്നാരഥോ᳚വർതതേവാം |<span class='RishiDevChandas'>{ഭൗമോത്രിഃ | അശ്വിനൗ | ത്രിഷ്ടുപ്}</span><p>മനോ᳚ജവാ,അശ്വിനാ॒വാത॑രംഹാ॒യേനാ᳚തിയാ॒ഥോദു॑രി॒താനി॒വിശ്വാ॒(സ്വാഹാ᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>യോഭൂയി॑ഷ്ഠം॒നാസ॑ത്യാഭ്യാംവി॒വേഷ॒ചനി॑ഷ്ഠംപി॒ത്വോരര॑തേവിഭാ॒ഗേ |<span class='RishiDevChandas'>{ഭൗമോത്രിഃ | അശ്വിനൗ | ത്രിഷ്ടുപ്}</span><p>സതോ॒കമ॑സ്യപീപര॒ച്ഛമീ᳚ഭി॒രനൂ᳚ർധ്വഭാസഃ॒സദ॒മിത്തു॑തുര്യാ॒‌ത്(സ്വാഹാ᳚) || 4 || </td>
+<td class='VargaStyle2'>യോഭൂയി॑ഷ്ഠം॒നാസ॑ത്യാഭ്യാംവി॒വേഷ॒ചനി॑ഷ്ഠംപി॒ത്വോരര॑തേവിഭാ॒ഗേ |<span class='RishiDevChandas'>{ഭൗമോത്രിഃ | അശ്വിനൗ | ത്രിഷ്ടുപ്}</span><p>സതോ॒കമ॑സ്യപീപര॒ച്ഛമീ᳚ഭി॒രനൂ᳚ർധ്വഭാസഃ॒സദ॒മിത്‌തു॑തുര്യാ॒‌ത്(സ്വാഹാ᳚) || 4 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>സമ॒ശ്വിനോ॒രവ॑സാ॒നൂത॑നേനമയോ॒ഭുവാ᳚സു॒പ്രണീ᳚തീഗമേമ |<span class='RishiDevChandas'>{ഭൗമോത്രിഃ | അശ്വിനൗ | ത്രിഷ്ടുപ്}</span><p>ആനോ᳚ര॒യിംവ॑ഹത॒മോതവീ॒രാനാവിശ്വാ᳚ന്യമൃതാ॒സൗഭ॑ഗാനി॒(സ്വാഹാ᳚) || 5 || </td>
@@ -2291,7 +2291,7 @@
 <td class='VargaStyle1'>അശ്വി॑നാവാജിനീവസൂജു॒ഷേഥാം᳚യ॒ജ്ഞമി॒ഷ്ടയേ᳚ |<span class='RishiDevChandas'>{ആത്രേയഃ സപ്തവധ്രിഃ | അശ്വിനൗ | ഉഷ്ണിക്}</span><p>ഹം॒സാവി॑വപതത॒മാസു॒താഁ,ഉപ॒(സ്വാഹാ᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>അത്രി॒ര്യദ്വാ᳚മവ॒രോഹ᳚ന്നൃ॒ബീസ॒മജോ᳚ഹവീ॒ന്നാധ॑മാനേവ॒യോഷാ᳚ |<span class='RishiDevChandas'>{ആത്രേയഃ സപ്തവധ്രിഃ | അശ്വിനൗ | ത്രിഷ്ടുപ്}</span><p>ശ്യേ॒നസ്യ॑ചി॒ജ്ജവ॑സാ॒നൂത॑നേ॒നാഗ॑ച്ഛതമശ്വിനാ॒ശന്ത॑മേന॒(സ്വാഹാ᳚) || 4 || </td>
+<td class='VargaStyle1'>അത്രി॒ര്യദ്‌വാ᳚മവ॒രോഹ᳚ന്നൃ॒ബീസ॒മജോ᳚ഹവീ॒ന്നാധ॑മാനേവ॒യോഷാ᳚ |<span class='RishiDevChandas'>{ആത്രേയഃ സപ്തവധ്രിഃ | അശ്വിനൗ | ത്രിഷ്ടുപ്}</span><p>ശ്യേ॒നസ്യ॑ചി॒ജ്ജവ॑സാ॒നൂത॑നേ॒നാഽഽഗ॑ച്ഛതമശ്വിനാ॒ശന്ത॑മേന॒(സ്വാഹാ᳚) || 4 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>വിജി॑ഹീഷ്വവനസ്പതേ॒യോനിഃ॒സൂഷ്യ᳚ന്ത്യാ,ഇവ |<span class='RishiDevChandas'>{ആത്രേയഃ സപ്തവധ്രിഃ | അശ്വിനൗ | അനുഷ്ടുപ്}</span><p>ശ്രു॒തംമേ᳚,അശ്വിനാ॒ഹവം᳚സ॒പ്തവ॑ധ്രിംചമുഞ്ചത॒‌മ്(സ്വാഹാ᳚) || 5 || <span class='MantraNumbering'>വർഗ:20</span></td>
