--- a/Rigveda/SamhitaPatha/Tamil/Mandala/Format4/RVS-Tamil-F4-M05.html
+++ b/Rigveda/SamhitaPatha/Tamil/Mandala/Format4/RVS-Tamil-F4-M05.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ருʼக்³வேத³ ஸம்ʼஹிதா (மண்ட³ல: 05) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 10-Jan-2025]</h6>
+<br> [Last updated on: 13-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -2042,7 +2042,7 @@
 <td class='VargaStyle2'>தத்³ரு॒ʼதம்ʼப்ரு॑ʼதி²விப்³ரு॒ʼஹச்ச்²ர॑வஏ॒ஷருʼஷீ᳚ணாம் |<span class='RishiDevChandas'>{ஆத்ரேயோ ராதஹவ்ய꞉ | மித்ராவருணௌ | அனுஷ்டுப்}</span><p>ஜ்ர॒ய॒ஸா॒னாவரம்᳚ʼப்ரு॒ʼத்²வதி॑க்ஷரந்தி॒யாம॑பி⁴॒꞉(ஸ்வாஹா᳚) || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ஆயத்³வா᳚மீயசக்ஷஸா॒மித்ர॑வ॒யம்ʼச॑ஸூ॒ரய॑꞉ |<span class='RishiDevChandas'>{ஆத்ரேயோ ராதஹவ்ய꞉ | மித்ராவருணௌ | அனுஷ்டுப்}</span><p>வ்யசி॑ஷ்டே²ப³ஹு॒பாய்யே॒யதே᳚மஹிஸ்வ॒ராஜ்யே॒(ஸ்வாஹா᳚) || 6 || </td>
+<td class='VargaStyle2'>ஆயத்³‌வா᳚மீயசக்ஷஸா॒மித்ர॑வ॒யம்ʼச॑ஸூ॒ரய॑꞉ |<span class='RishiDevChandas'>{ஆத்ரேயோ ராதஹவ்ய꞉ | மித்ராவருணௌ | அனுஷ்டுப்}</span><p>வ்யசி॑ஷ்டே²ப³ஹு॒பாய்யே॒யதே᳚மஹிஸ்வ॒ராஜ்யே॒(ஸ்வாஹா᳚) || 6 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[67] ப³ளித்தா²தே³வேதி பஞ்சர்சஸ்ய ஸூக்தஸ்யாத்ரேயோயஜதோ மித்ராவருணாவனுஷ்டுப் |<span class='MantraNumbering'>{மண்ட³ல:5, ஸூக்த:67}{அனுவாக:5, ஸூக்த:11}{அஷ்டக:4, அத்⁴யாய:4}</span>
@@ -2087,10 +2087,10 @@
 </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>த்ரீரோ᳚ச॒னாவ॑ருண॒த்ரீம்ˮரு॒தத்³யூந்த்ரீணி॑மித்ரதா⁴ரயதோ²॒ரஜாம்᳚ʼஸி |<span class='RishiDevChandas'>{ஆத்ரேயோ உரூசக்ரி꞉ | மித்ராவருணௌ | த்ரிஷ்டுப்}</span><p>வா॒வ்ரு॒ʼதா⁴॒னாவ॒மதிம்᳚ʼக்ஷ॒த்ரிய॒ஸ்யானு᳚வ்ர॒தம்ʼரக்ஷ॑மாணாவஜு॒ர்யம்(ஸ்வாஹா᳚) || 1 || <span class='MantraNumbering'>வர்க³:7</span></td>
+<td class='VargaStyle1'>த்ரீரோ᳚ச॒னாவ॑ருண॒த்ரீம்ˮரு॒தத்³யூன்த்ரீணி॑மித்ரதா⁴ரயதோ²॒ரஜாம்᳚ʼஸி |<span class='RishiDevChandas'>{ஆத்ரேயோ உரூசக்ரி꞉ | மித்ராவருணௌ | த்ரிஷ்டுப்}</span><p>வா॒வ்ரு॒ʼதா⁴॒னாவ॒மதிம்᳚ʼக்ஷ॒த்ரிய॒ஸ்யா(அ)னு᳚வ்ர॒தம்ʼரக்ஷ॑மாணாவஜு॒ர்யம்(ஸ்வாஹா᳚) || 1 || <span class='MantraNumbering'>வர்க³:7</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>இரா᳚வதீர்வருணதே⁴॒னவோ᳚வாம்॒ʼமது⁴॑மத்³வாம்॒ʼஸிந்த⁴॑வோமித்ரது³ஹ்ரே |<span class='RishiDevChandas'>{ஆத்ரேயோ உரூசக்ரி꞉ | மித்ராவருணௌ | த்ரிஷ்டுப்}</span><p>த்ரய॑ஸ்தஸ்து²ர்வ்ருʼஷ॒பா⁴ஸ॑ஸ்திஸ்ரு॒ʼணாம்ʼதி⁴॒ஷணா᳚நாம்ʼரேதோ॒தா⁴வித்³யு॒மந்த॒꞉(ஸ்வாஹா᳚) || 2 || </td>
+<td class='VargaStyle1'>இரா᳚வதீர்வருணதே⁴॒னவோ᳚வாம்॒ʼமது⁴॑மத்³வாம்॒ʼஸிந்த⁴॑வோமித்ரது³ஹ்ரே |<span class='RishiDevChandas'>{ஆத்ரேயோ உரூசக்ரி꞉ | மித்ராவருணௌ | த்ரிஷ்டுப்}</span><p>த்ரய॑ஸ்தஸ்து²ர்வ்ருʼஷ॒பா⁴ஸ॑ஸ்திஸ்ரூ॒ʼணாம்ʼதி⁴॒ஷணா᳚நாம்ʼரேதோ॒தா⁴வித்³யு॒மந்த॒꞉(ஸ்வாஹா᳚) || 2 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ப்ரா॒தர்தே³॒வீமதி³॑திம்ʼஜோஹவீமிம॒த்⁴யந்தி³॑ன॒உதி³॑தா॒ஸூர்ய॑ஸ்ய |<span class='RishiDevChandas'>{ஆத்ரேயோ உரூசக்ரி꞉ | மித்ராவருணௌ | த்ரிஷ்டுப்}</span><p>ரா॒யேமி॑த்ராவருணாஸ॒ர்வதா॒தேளே᳚தோ॒காய॒தன॑யாய॒ஶம்ʼயோ꞉(ஸ்வாஹா᳚) || 3 || </td>
@@ -2109,7 +2109,7 @@
 <td class='VargaStyle2'>தாவாம்᳚ʼஸ॒ம்யக³॑த்³ருஹ்வா॒ணேஷ॑மஶ்யாம॒தா⁴ய॑ஸே |<span class='RishiDevChandas'>{ஆத்ரேயோ உரூசக்ரி꞉ | மித்ராவருணௌ | கா³யத்ரீ}</span><p>வ॒யம்ʼதேரு॑த்³ராஸ்யாம॒(ஸ்வாஹா᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>பா॒தம்ʼநோ᳚ருத்³ராபா॒யுபி⁴॑ரு॒தத்ரா᳚யேதா²ம்ʼஸுத்ரா॒த்ரா |<span class='RishiDevChandas'>{ஆத்ரேயோ உரூசக்ரி꞉ | மித்ராவருணௌ | கா³யத்ரீ}</span><p>து॒ர்யாம॒த³ஸ்யூ᳚ந்த॒னூபி⁴॒꞉(ஸ்வாஹா᳚) || 3 || </td>
+<td class='VargaStyle2'>பா॒தம்ʼநோ᳚ருத்³ராபா॒யுபி⁴॑ரு॒தத்ரா᳚யேதா²ம்ʼஸுத்ரா॒த்ரா |<span class='RishiDevChandas'>{ஆத்ரேயோ உரூசக்ரி꞉ | மித்ராவருணௌ | கா³யத்ரீ}</span><p>து॒ர்யாம॒த³ஸ்யூ᳚ன்‌த॒னூபி⁴॒꞉(ஸ்வாஹா᳚) || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>மாகஸ்யா᳚த்³பு⁴தக்ரதூய॒க்ஷம்ʼபு⁴॑ஜேமாத॒னூபி⁴॑꞉ |<span class='RishiDevChandas'>{ஆத்ரேயோ உரூசக்ரி꞉ | மித்ராவருணௌ | கா³யத்ரீ}</span><p>மாஶேஷ॑ஸா॒மாதன॑ஸா॒(ஸ்வாஹா᳚) || 4 || </td>
@@ -2145,41 +2145,41 @@
 </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>யத³॒த்³யஸ்த²꞉ப॑ரா॒வதி॒யத³᳚ர்வா॒வத்ய॑ஶ்வினா |<span class='RishiDevChandas'>{ஆத்ரேய꞉ பௌர꞉ | அஶ்வினௌ | அனுஷ்டுப்}</span><p>யத்³வா᳚பு॒ரூபு॑ருபு⁴ஜா॒யத³॒ந்தரி॑க்ஷ॒ஆக³॑த॒‌ம்(ஸ்வாஹா᳚) || 1 || <span class='MantraNumbering'>வர்க³:11</span></td>
+<td class='VargaStyle1'>யத³॒த்³யஸ்த²꞉ப॑ரா॒வதி॒யத³᳚ர்வா॒வத்ய॑ஶ்வினா |<span class='RishiDevChandas'>{ஆத்ரேய꞉ பௌர꞉ | அஶ்வினௌ | அனுஷ்டுப்}</span><p>யத்³‌வா᳚பு॒ரூபு॑ருபு⁴ஜா॒யத³॒ந்தரி॑க்ஷ॒ஆக³॑த॒‌ம்(ஸ்வாஹா᳚) || 1 || <span class='MantraNumbering'>வர்க³:11</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>இ॒ஹத்யாபு॑ரு॒பூ⁴த॑மாபு॒ரூத³ம்ʼஸாம்᳚ʼஸி॒பி³ப்⁴ர॑தா |<span class='RishiDevChandas'>{ஆத்ரேய꞉ பௌர꞉ | அஶ்வினௌ | அனுஷ்டுப்}</span><p>வ॒ர॒ஸ்யாயா॒ம்யத்⁴ரி॑கூ³ஹு॒வேது॒விஷ்ட॑மாபு⁴॒ஜே(ஸ்வாஹா᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ஈ॒ர்மான்யத்³வபு॑ஷே॒வபு॑ஶ்ச॒க்ரம்ʼரத²॑ஸ்யயேமது²꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ பௌர꞉ | அஶ்வினௌ | அனுஷ்டுப்}</span><p>பர்ய॒ன்யாநாஹு॑ஷாயு॒கா³ம॒ஹ்னாரஜாம்᳚ʼஸிதீ³யத²॒꞉(ஸ்வாஹா᳚) || 3 || </td>
+<td class='VargaStyle1'>ஈ॒ர்மான்யத்³‌வபு॑ஷே॒வபு॑ஶ்ச॒க்ரம்ʼரத²॑ஸ்யயேமது²꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ பௌர꞉ | அஶ்வினௌ | அனுஷ்டுப்}</span><p>பர்ய॒ன்யாநாஹு॑ஷாயு॒கா³ம॒ஹ்னாரஜாம்᳚ʼஸிதீ³யத²॒꞉(ஸ்வாஹா᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ததூ³॒ஷுவா᳚மே॒னாக்ரு॒ʼதம்ʼவிஶ்வா॒யத்³வா॒மனு॒ஷ்டவே᳚ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ பௌர꞉ | அஶ்வினௌ | அனுஷ்டுப்}</span><p>நானா᳚ஜா॒தாவ॑ரே॒பஸா॒ஸம॒ஸ்மேப³ந்து⁴॒மேய॑து²॒꞉(ஸ்வாஹா᳚) || 4 || </td>
+<td class='VargaStyle1'>ததூ³॒ஷுவா᳚மே॒னாக்ரு॒ʼதம்ʼவிஶ்வா॒யத்³‌வா॒மனு॒ஷ்டவே᳚ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ பௌர꞉ | அஶ்வினௌ | அனுஷ்டுப்}</span><p>நானா᳚ஜா॒தாவ॑ரே॒பஸா॒ஸம॒ஸ்மேப³ந்து⁴॒மேய॑து²॒꞉(ஸ்வாஹா᳚) || 4 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ஆயத்³வாம்᳚ʼஸூ॒ர்யாரத²ம்॒ʼதிஷ்ட²॑த்³ரகு⁴॒ஷ்யத³ம்॒ʼஸதா³᳚ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ பௌர꞉ | அஶ்வினௌ | அனுஷ்டுப்}</span><p>பரி॑வாமரு॒ஷாவயோ᳚க்⁴ரு॒ʼணாவ॑ரந்தஆ॒தப॒꞉(ஸ்வாஹா᳚) || 5 || </td>
+<td class='VargaStyle1'>ஆயத்³‌வாம்᳚ʼஸூ॒ர்யாரத²ம்॒ʼதிஷ்ட²॑த்³‌ரகு⁴॒ஷ்யத³ம்॒ʼஸதா³᳚ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ பௌர꞉ | அஶ்வினௌ | அனுஷ்டுப்}</span><p>பரி॑வாமரு॒ஷாவயோ᳚க்⁴ரு॒ʼணாவ॑ரந்தஆ॒தப॒꞉(ஸ்வாஹா᳚) || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>யு॒வோரத்ரி॑ஶ்சிகேததி॒நரா᳚ஸு॒ம்னேன॒சேத॑ஸா |<span class='RishiDevChandas'>{ஆத்ரேய꞉ பௌர꞉ | அஶ்வினௌ | அனுஷ்டுப்}</span><p>க⁴॒ர்மம்ʼயத்³வா᳚மரே॒பஸம்॒ʼநாஸ॑த்யா॒ஸ்னாபு⁴॑ர॒ண்யதி॒(ஸ்வாஹா᳚) || 6 || <span class='MantraNumbering'>வர்க³:12</span></td>
+<td class='VargaStyle2'>யு॒வோரத்ரி॑ஶ்சிகேததி॒நரா᳚ஸு॒ம்னேன॒சேத॑ஸா |<span class='RishiDevChandas'>{ஆத்ரேய꞉ பௌர꞉ | அஶ்வினௌ | அனுஷ்டுப்}</span><p>க⁴॒ர்மம்ʼயத்³‌வா᳚மரே॒பஸம்॒ʼநாஸ॑த்யா॒ஸ்னாபு⁴॑ர॒ண்யதி॒(ஸ்வாஹா᳚) || 6 || <span class='MantraNumbering'>வர்க³:12</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>உ॒க்³ரோவாம்᳚ʼககு॒ஹோய॒யி꞉ஶ்ரு॒ʼண்வேயாமே᳚ஷுஸந்த॒னி꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ பௌர꞉ | அஶ்வினௌ | அனுஷ்டுப்}</span><p>யத்³வாம்॒ʼத³ம்ʼஸோ᳚பி⁴ரஶ்வி॒னாத்ரி᳚ர்னராவ॒வர்த॑தி॒(ஸ்வாஹா᳚) || 7 || </td>
+<td class='VargaStyle2'>உ॒க்³ரோவாம்᳚ʼககு॒ஹோய॒யி꞉ஶ்ரு॒ʼண்வேயாமே᳚ஷுஸந்த॒னி꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ பௌர꞉ | அஶ்வினௌ | அனுஷ்டுப்}</span><p>யத்³‌வாம்॒ʼத³ம்ʼஸோ᳚பி⁴ரஶ்வி॒னா(அ)த்ரி᳚ர்னராவ॒வர்த॑தி॒(ஸ்வாஹா᳚) || 7 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>மத்⁴வ॑ஊ॒ஷும॑தூ⁴யுவா॒ருத்³ரா॒ஸிஷ॑க்திபி॒ப்யுஷீ᳚ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ பௌர꞉ | அஶ்வினௌ | அனுஷ்டுப்}</span><p>யத்ஸ॑மு॒த்³ராதி॒பர்ஷ॑த²꞉ப॒க்வா꞉ப்ருʼக்ஷோ᳚ப⁴ரந்தவா॒‌ம்(ஸ்வாஹா᳚) || 8 || </td>
+<td class='VargaStyle2'>மத்⁴வ॑ஊ॒ஷும॑தூ⁴யுவா॒ருத்³ரா॒ஸிஷ॑க்திபி॒ப்யுஷீ᳚ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ பௌர꞉ | அஶ்வினௌ | அனுஷ்டுப்}</span><p>யத்‌ஸ॑மு॒த்³ராதி॒பர்ஷ॑த²꞉ப॒க்வா꞉ப்ருʼக்ஷோ᳚ப⁴ரந்தவா॒‌ம்(ஸ்வாஹா᳚) || 8 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ஸ॒த்யமித்³வா,உ॑அஶ்வினாயு॒வாமா᳚ஹுர்மயோ॒பு⁴வா᳚ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ பௌர꞉ | அஶ்வினௌ | அனுஷ்டுப்}</span><p>தாயாம᳚ன்யாம॒ஹூத॑மா॒யாம॒ன்னாம்ரு॑ʼள॒யத்த॑மா॒(ஸ்வாஹா᳚) || 9 || </td>
+<td class='VargaStyle2'>ஸ॒த்யமித்³‌வா,உ॑அஶ்வினாயு॒வாமா᳚ஹுர்மயோ॒பு⁴வா᳚ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ பௌர꞉ | அஶ்வினௌ | அனுஷ்டுப்}</span><p>தாயாம᳚ன்‌யாம॒ஹூத॑மா॒யாம॒ன்னாம்ரு॑ʼள॒யத்த॑மா॒(ஸ்வாஹா᳚) || 9 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>இ॒மாப்³ரஹ்மா᳚ணி॒வர்த⁴॑னா॒ஶ்விப்⁴யாம்᳚ʼஸந்து॒ஶந்த॑மா |<span class='RishiDevChandas'>{ஆத்ரேய꞉ பௌர꞉ | அஶ்வினௌ | அனுஷ்டுப்}</span><p>யாதக்ஷா᳚ம॒ரதா²ம்᳚ˮ,இ॒வாவோ᳚சாமப்³ரு॒ʼஹன்னம॒꞉(ஸ்வாஹா᳚) || 10 || </td>
+<td class='VargaStyle2'>இ॒மாப்³ரஹ்மா᳚ணி॒வர்த⁴॑னா॒(அ)ஶ்விப்⁴யாம்᳚ʼஸந்து॒ஶந்த॑மா |<span class='RishiDevChandas'>{ஆத்ரேய꞉ பௌர꞉ | அஶ்வினௌ | அனுஷ்டுப்}</span><p>யாதக்ஷா᳚ம॒ரதா²ம்᳚ˮ,இ॒வா(அ)வோ᳚சாமப்³ரு॒ʼஹன்னம॒꞉(ஸ்வாஹா᳚) || 10 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[74] கூஷ்டோ²தே³வாவிதி த³ஶர்சஸ்ய ஸூக்தஸ்யாத்ரேய꞉ பௌரோஶ்வினாவனுஷ்டுப் |<span class='MantraNumbering'>{மண்ட³ல:5, ஸூக்த:74}{அனுவாக:6, ஸூக்த:2}{அஷ்டக:4, அத்⁴யாய:4}</span>
 </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>கூஷ்டோ²᳚தே³வாவஶ்வினா॒த்³யாதி³॒வோம॑னாவஸூ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ பௌர꞉ | அஶ்வினௌ | அனுஷ்டுப்}</span><p>தச்ச்²ர॑வதோ²வ்ருʼஷண்வஸூ॒,அத்ரி᳚ர்வா॒மாவி॑வாஸதி॒(ஸ்வாஹா᳚) || 1 || <span class='MantraNumbering'>வர்க³:13</span></td>
+<td class='VargaStyle1'>கூஷ்டோ²᳚தே³வாவஶ்வினா॒(அ)த்³யாதி³॒வோம॑னாவஸூ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ பௌர꞉ | அஶ்வினௌ | அனுஷ்டுப்}</span><p>தச்ச்²ர॑வதோ²வ்ருʼஷண்வஸூ॒,அத்ரி᳚ர்வா॒மாவி॑வாஸதி॒(ஸ்வாஹா᳚) || 1 || <span class='MantraNumbering'>வர்க³:13</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>குஹ॒த்யாகுஹ॒நுஶ்ரு॒தாதி³॒விதே³॒வாநாஸ॑த்யா |<span class='RishiDevChandas'>{ஆத்ரேய꞉ பௌர꞉ | அஶ்வினௌ | அனுஷ்டுப்}</span><p>கஸ்மி॒ன்னாய॑ததோ²॒ஜனே॒கோவாம்᳚ʼந॒தீ³னாம்॒ʼஸசா॒(ஸ்வாஹா᳚) || 2 || </td>
@@ -2203,7 +2203,7 @@
 <td class='VargaStyle2'>ஆவாம்॒ʼரதோ²॒ரதா²᳚நாம்॒ʼயேஷ்டோ²᳚யாத்வஶ்வினா |<span class='RishiDevChandas'>{ஆத்ரேய꞉ பௌர꞉ | அஶ்வினௌ | அனுஷ்டுப்}</span><p>பு॒ரூசி॑த³ஸ்ம॒யுஸ்தி॒ரஆ᳚ங்கூ³॒ஷோமர்த்யே॒ஷ்வா(ஸ்வாஹா᳚) || 8 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ஶமூ॒ஷுவாம்᳚ʼமதூ⁴யுவா॒ஸ்மாக॑மஸ்துசர்க்ரு॒ʼதி꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ பௌர꞉ | அஶ்வினௌ | அனுஷ்டுப்}</span><p>அ॒ர்வா॒சீ॒னாவி॑சேதஸா॒விபி⁴॑꞉ஶ்யே॒னேவ॑தீ³யத॒‌ம்(ஸ்வாஹா᳚) || 9 || </td>
+<td class='VargaStyle2'>ஶமூ॒ஷுவாம்᳚ʼமதூ⁴யுவா॒(அ)ஸ்மாக॑மஸ்துசர்க்ரு॒ʼதி꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ பௌர꞉ | அஶ்வினௌ | அனுஷ்டுப்}</span><p>அ॒ர்வா॒சீ॒னாவி॑சேதஸா॒விபி⁴॑꞉ஶ்யே॒னேவ॑தீ³யத॒‌ம்(ஸ்வாஹா᳚) || 9 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>அஶ்வி॑னா॒யத்³த⁴॒கர்ஹி॑சிச்சு²ஶ்ரூ॒யாத॑மி॒மம்ʼஹவ᳚ம் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ பௌர꞉ | அஶ்வினௌ | அனுஷ்டுப்}</span><p>வஸ்வீ᳚ரூ॒ஷுவாம்॒ʼபு⁴ஜ॑꞉ப்ரு॒ʼஞ்சந்தி॒ஸுவாம்॒ʼப்ருʼச॒꞉(ஸ்வாஹா᳚) || 10 || </td>
@@ -2244,16 +2244,16 @@
 </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ஆபா⁴᳚த்ய॒க்³நிரு॒ஷஸா॒மனீ᳚க॒முத்³விப்ரா᳚ணாம்ʼதே³வ॒யாவாசோ᳚,அஸ்து²꞉ |<span class='RishiDevChandas'>{பௌ⁴மோத்ரி꞉ | அஶ்வினௌ | த்ரிஷ்டுப்}</span><p>அ॒ர்வாஞ்சா᳚நூ॒னம்ʼர॑த்²யே॒ஹயா᳚தம்ʼபீபி॒வாம்ʼஸ॑மஶ்வினாக⁴॒ர்மமச்ச²॒(ஸ்வாஹா᳚) || 1 || <span class='MantraNumbering'>வர்க³:17</span></td>
+<td class='VargaStyle1'>ஆபா⁴᳚த்ய॒க்³நிரு॒ஷஸா॒மனீ᳚க॒முத்³‌விப்ரா᳚ணாம்ʼதே³வ॒யாவாசோ᳚,அஸ்து²꞉ |<span class='RishiDevChandas'>{பௌ⁴மோத்ரி꞉ | அஶ்வினௌ | த்ரிஷ்டுப்}</span><p>அ॒ர்வாஞ்சா᳚நூ॒னம்ʼர॑த்²யே॒ஹயா᳚தம்ʼபீபி॒வாம்ʼஸ॑மஶ்வினாக⁴॒ர்மமச்ச²॒(ஸ்வாஹா᳚) || 1 || <span class='MantraNumbering'>வர்க³:17</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>நஸம்᳚ʼஸ்க்ரு॒ʼதம்ʼப்ரமி॑மீதோ॒க³மி॒ஷ்டா²ந்தி॑நூ॒னம॒ஶ்வினோப॑ஸ்துதே॒ஹ |<span class='RishiDevChandas'>{பௌ⁴மோத்ரி꞉ | அஶ்வினௌ | த்ரிஷ்டுப்}</span><p>தி³வா᳚பி⁴பி॒த்வே(அ)வ॒ஸாக³॑மிஷ்டா²॒ப்ரத்யவ॑ர்திம்ʼதா³॒ஶுஷே॒ஶம்ப⁴॑விஷ்டா²॒(ஸ்வாஹா᳚) || 2 || </td>
+<td class='VargaStyle1'>நஸம்᳚ʼஸ்க்ரு॒ʼதம்ʼப்ரமி॑மீதோ॒க³மி॒ஷ்டா²(அ)ந்தி॑நூ॒னம॒ஶ்வினோப॑ஸ்துதே॒ஹ |<span class='RishiDevChandas'>{பௌ⁴மோத்ரி꞉ | அஶ்வினௌ | த்ரிஷ்டுப்}</span><p>தி³வா᳚பி⁴பி॒த்வே(அ)வ॒ஸாக³॑மிஷ்டா²॒ப்ரத்யவ॑ர்திம்ʼதா³॒ஶுஷே॒ஶம்ப⁴॑விஷ்டா²॒(ஸ்வாஹா᳚) || 2 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>உ॒தாயா᳚தம்ʼஸங்க³॒வேப்ரா॒தரஹ்னோ᳚ம॒த்⁴யந்தி³॑ன॒உதி³॑தா॒ஸூர்ய॑ஸ்ய |<span class='RishiDevChandas'>{பௌ⁴மோத்ரி꞉ | அஶ்வினௌ | த்ரிஷ்டுப்}</span><p>தி³வா॒நக்த॒மவ॑ஸா॒ஶந்த॑மேன॒நேதா³னீம்᳚ʼபீ॒திர॒ஶ்வினாத॑தான॒(ஸ்வாஹா᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>இ॒த³ம்ʼஹிவாம்᳚ʼப்ர॒தி³வி॒ஸ்தா²ன॒மோக॑இ॒மேக்³ரு॒ʼஹா,அ॑ஶ்வினே॒த³ம்ʼது³॑ரோ॒ணம் |<span class='RishiDevChandas'>{பௌ⁴மோத்ரி꞉ | அஶ்வினௌ | த்ரிஷ்டுப்}</span><p>ஆநோ᳚தி³॒வோப்³ரு॑ʼஹ॒த꞉பர்வ॑தா॒தா³த்³ப்⁴யோயா᳚த॒மிஷ॒மூர்ஜம்॒ʼவஹ᳚ந்தா॒(ஸ்வாஹா᳚) || 4 || </td>
+<td class='VargaStyle1'>இ॒த³ம்ʼஹிவாம்᳚ʼப்ர॒தி³வி॒ஸ்தா²ன॒மோக॑இ॒மேக்³ரு॒ʼஹா,அ॑ஶ்வினே॒த³ம்ʼது³॑ரோ॒ணம் |<span class='RishiDevChandas'>{பௌ⁴மோத்ரி꞉ | அஶ்வினௌ | த்ரிஷ்டுப்}</span><p>ஆநோ᳚தி³॒வோப்³ரு॑ʼஹ॒த꞉பர்வ॑தா॒தா³(அ)த்³ப்⁴யோயா᳚த॒மிஷ॒மூர்ஜம்॒ʼவஹ᳚ந்தா॒(ஸ்வாஹா᳚) || 4 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ஸம॒ஶ்வினோ॒ரவ॑ஸா॒நூத॑னேனமயோ॒பு⁴வா᳚ஸு॒ப்ரணீ᳚தீக³மேம |<span class='RishiDevChandas'>{பௌ⁴மோத்ரி꞉ | அஶ்வினௌ | த்ரிஷ்டுப்}</span><p>ஆநோ᳚ர॒யிம்ʼவ॑ஹத॒மோதவீ॒ரானாவிஶ்வா᳚ன்யம்ருʼதா॒ஸௌப⁴॑கா³னி॒(ஸ்வாஹா᳚) || 5 || </td>
@@ -2266,13 +2266,13 @@
 <td class='VargaStyle2'>ப்ரா॒த॒ர்யாவா᳚ணாப்ரத²॒மாய॑ஜத்⁴வம்ʼபு॒ராக்³ருʼத்⁴ரா॒த³ர॑ருஷ꞉பிபா³த꞉ |<span class='RishiDevChandas'>{பௌ⁴மோத்ரி꞉ | அஶ்வினௌ | த்ரிஷ்டுப்}</span><p>ப்ரா॒தர்ஹிய॒ஜ்ஞம॒ஶ்வினா᳚த³॒தா⁴தே॒ப்ரஶம்᳚ʼஸந்திக॒வய॑꞉பூர்வ॒பா⁴ஜ॒꞉(ஸ்வாஹா᳚) || 1 || <span class='MantraNumbering'>வர்க³:18</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ப்ரா॒தர்ய॑ஜத்⁴வம॒ஶ்வினா᳚ஹினோத॒நஸா॒யம॑ஸ்திதே³வ॒யா,அஜு॑ஷ்டம் |<span class='RishiDevChandas'>{பௌ⁴மோத்ரி꞉ | அஶ்வினௌ | த்ரிஷ்டுப்}</span><p>உ॒தான்யோ,அ॒ஸ்மத்³ய॑ஜதே॒விசாவ॒꞉பூர்வ॑꞉பூர்வோ॒யஜ॑மானோ॒வனீ᳚யா॒‌ந்(ஸ்வாஹா᳚) || 2 || </td>
+<td class='VargaStyle2'>ப்ரா॒தர்ய॑ஜத்⁴வம॒ஶ்வினா᳚ஹினோத॒நஸா॒யம॑ஸ்திதே³வ॒யா,அஜு॑ஷ்டம் |<span class='RishiDevChandas'>{பௌ⁴மோத்ரி꞉ | அஶ்வினௌ | த்ரிஷ்டுப்}</span><p>உ॒தான்யோ,அ॒ஸ்மத்³‌ய॑ஜதே॒விசாவ॒꞉பூர்வ॑꞉பூர்வோ॒யஜ॑மானோ॒வனீ᳚யா॒‌ந்(ஸ்வாஹா᳚) || 2 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ஹிர᳚ண்யத்வ॒ங்மது⁴॑வர்ணோக்⁴ரு॒ʼதஸ்னு॒꞉ப்ருʼக்ஷோ॒வஹ॒ன்னாரதோ²᳚வர்ததேவாம் |<span class='RishiDevChandas'>{பௌ⁴மோத்ரி꞉ | அஶ்வினௌ | த்ரிஷ்டுப்}</span><p>மனோ᳚ஜவா,அஶ்வினா॒வாத॑ரம்ʼஹா॒யேனா᳚தியா॒தோ²து³॑ரி॒தானி॒விஶ்வா॒(ஸ்வாஹா᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>யோபூ⁴யி॑ஷ்ட²ம்॒ʼநாஸ॑த்யாப்⁴யாம்ʼவி॒வேஷ॒சனி॑ஷ்ட²ம்ʼபி॒த்வோரர॑தேவிபா⁴॒கே³ |<span class='RishiDevChandas'>{பௌ⁴மோத்ரி꞉ | அஶ்வினௌ | த்ரிஷ்டுப்}</span><p>ஸதோ॒கம॑ஸ்யபீபர॒ச்ச²மீ᳚பி⁴॒ரனூ᳚ர்த்⁴வபா⁴ஸ॒꞉ஸத³॒மித்து॑துர்யா॒‌த்(ஸ்வாஹா᳚) || 4 || </td>
+<td class='VargaStyle2'>யோபூ⁴யி॑ஷ்ட²ம்॒ʼநாஸ॑த்யாப்⁴யாம்ʼவி॒வேஷ॒சனி॑ஷ்ட²ம்ʼபி॒த்வோரர॑தேவிபா⁴॒கே³ |<span class='RishiDevChandas'>{பௌ⁴மோத்ரி꞉ | அஶ்வினௌ | த்ரிஷ்டுப்}</span><p>ஸதோ॒கம॑ஸ்யபீபர॒ச்ச²மீ᳚பி⁴॒ரனூ᳚ர்த்⁴வபா⁴ஸ॒꞉ஸத³॒மித்‌து॑துர்யா॒‌த்(ஸ்வாஹா᳚) || 4 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ஸம॒ஶ்வினோ॒ரவ॑ஸா॒நூத॑னேனமயோ॒பு⁴வா᳚ஸு॒ப்ரணீ᳚தீக³மேம |<span class='RishiDevChandas'>{பௌ⁴மோத்ரி꞉ | அஶ்வினௌ | த்ரிஷ்டுப்}</span><p>ஆநோ᳚ர॒யிம்ʼவ॑ஹத॒மோதவீ॒ரானாவிஶ்வா᳚ன்யம்ருʼதா॒ஸௌப⁴॑கா³னி॒(ஸ்வாஹா᳚) || 5 || </td>
@@ -2291,7 +2291,7 @@
 <td class='VargaStyle1'>அஶ்வி॑னாவாஜினீவஸூஜு॒ஷேதா²ம்᳚ʼய॒ஜ்ஞமி॒ஷ்டயே᳚ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸப்தவத்⁴ரி꞉ | அஶ்வினௌ | உஷ்ணிக்}</span><p>ஹம்॒ʼஸாவி॑வபதத॒மாஸு॒தாம்ˮ,உப॒(ஸ்வாஹா᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>அத்ரி॒ர்யத்³வா᳚மவ॒ரோஹ᳚ன்ன்ரு॒ʼபீ³ஸ॒மஜோ᳚ஹவீ॒ன்னாத⁴॑மானேவ॒யோஷா᳚ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸப்தவத்⁴ரி꞉ | அஶ்வினௌ | த்ரிஷ்டுப்}</span><p>ஶ்யே॒னஸ்ய॑சி॒ஜ்ஜவ॑ஸா॒நூத॑னே॒நாக³॑ச்ச²தமஶ்வினா॒ஶந்த॑மேன॒(ஸ்வாஹா᳚) || 4 || </td>
+<td class='VargaStyle1'>அத்ரி॒ர்யத்³‌வா᳚மவ॒ரோஹ᳚ன்ன்ரு॒ʼபீ³ஸ॒மஜோ᳚ஹவீ॒ன்னாத⁴॑மானேவ॒யோஷா᳚ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸப்தவத்⁴ரி꞉ | அஶ்வினௌ | த்ரிஷ்டுப்}</span><p>ஶ்யே॒னஸ்ய॑சி॒ஜ்ஜவ॑ஸா॒நூத॑னே॒னா(ஆ)க³॑ச்ச²தமஶ்வினா॒ஶந்த॑மேன॒(ஸ்வாஹா᳚) || 4 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>விஜி॑ஹீஷ்வவனஸ்பதே॒யோனி॒꞉ஸூஷ்ய᳚ந்த்யா,இவ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸப்தவத்⁴ரி꞉ | அஶ்வினௌ | அனுஷ்டுப்}</span><p>ஶ்ரு॒தம்ʼமே᳚,அஶ்வினா॒ஹவம்᳚ʼஸ॒ப்தவ॑த்⁴ரிம்ʼசமுஞ்சத॒‌ம்(ஸ்வாஹா᳚) || 5 || <span class='MantraNumbering'>வர்க³:20</span></td>
