--- a/Rigveda/SamhitaPatha/Telugu/Ashtaka/Format3/RVS-Telugu-F3-A04.html
+++ b/Rigveda/SamhitaPatha/Telugu/Ashtaka/Format3/RVS-Telugu-F3-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ఋగ్వేద సంహితా (అష్టక: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 10-Jan-2025]</h6>
+<br> [Last updated on: 13-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1697,7 +1697,7 @@
 <td class='VargaStyle2'>తదృ॒తంపృ॑థివిబృ॒హచ్ఛ్ర॑వఏ॒షఋషీ᳚ణాం | జ్ర॒య॒సా॒నావరం᳚పృ॒థ్వతి॑క్షరంతి॒యామ॑భిః || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ఆయద్వా᳚మీయచక్షసా॒మిత్ర॑వ॒యంచ॑సూ॒రయః॑ | వ్యచి॑ష్ఠేబహు॒పాయ్యే॒యతే᳚మహిస్వ॒రాజ్యే᳚ || 6 || </td>
+<td class='VargaStyle2'>ఆయద్‌వా᳚మీయచక్షసా॒మిత్ర॑వ॒యంచ॑సూ॒రయః॑ | వ్యచి॑ష్ఠేబహు॒పాయ్యే॒యతే᳚మహిస్వ॒రాజ్యే᳚ || 6 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[59] బళిత్థాదేవేతి పంచర్చస్య సూక్తస్యాత్రేయోయజతో మిత్రావరుణావనుష్టుప్ |<span class='MantraNumbering'>{అష్టక:4, అధ్యాయ:4}{మండల:5, సూక్త:67}{అనువాక:5, సూక్త:11}</td>
@@ -1739,10 +1739,10 @@
 <td class='SuktaLabel'>[61] త్రీరోచనేతి చతురృచస్య సూక్తస్యాత్రేయ ఉరుచక్రిర్మిత్రావరుణౌత్రిష్టుప్ |<span class='MantraNumbering'>{అష్టక:4, అధ్యాయ:4}{మండల:5, సూక్త:69}{అనువాక:5, సూక్త:13}</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>త్రీరో᳚చ॒నావ॑రుణ॒త్రీఀరు॒తద్యూంత్రీణి॑మిత్రధారయథో॒రజాం᳚సి |<p>వా॒వృ॒ధా॒నావ॒మతిం᳚క్ష॒త్రియ॒స్యాను᳚వ్ర॒తంరక్ష॑మాణావజు॒ర్యం || 1 || <span class='MantraNumbering'>వర్గ:7</span></td>
+<td class='VargaStyle1'>త్రీరో᳚చ॒నావ॑రుణ॒త్రీఀరు॒తద్యూన్త్రీణి॑మిత్రధారయథో॒రజాం᳚సి |<p>వా॒వృ॒ధా॒నావ॒మతిం᳚క్ష॒త్రియ॒స్యాఽను᳚వ్ర॒తంరక్ష॑మాణావజు॒ర్యం || 1 || <span class='MantraNumbering'>వర్గ:7</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ఇరా᳚వతీర్వరుణధే॒నవో᳚వాం॒మధు॑మద్వాం॒సింధ॑వోమిత్రదుహ్రే |<p>త్రయ॑స్తస్థుర్వృష॒భాస॑స్తిసృ॒ణాంధి॒షణా᳚నాంరేతో॒ధావిద్యు॒మంతః॑ || 2 || </td>
+<td class='VargaStyle1'>ఇరా᳚వతీర్వరుణధే॒నవో᳚వాం॒మధు॑మద్వాం॒సింధ॑వోమిత్రదుహ్రే |<p>త్రయ॑స్తస్థుర్వృష॒భాస॑స్తిసౄ॒ణాంధి॒షణా᳚నాంరేతో॒ధావిద్యు॒మంతః॑ || 2 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ప్రా॒తర్దే॒వీమది॑తింజోహవీమిమ॒ధ్యంది॑న॒ఉది॑తా॒సూర్య॑స్య |<p>రా॒యేమి॑త్రావరుణాస॒ర్వతా॒తేళే᳚తో॒కాయ॒తన॑యాయ॒శంయోః || 3 || </td>
@@ -1760,7 +1760,7 @@
 <td class='VargaStyle2'>తావాం᳚స॒మ్యగ॑ద్రుహ్వా॒ణేష॑మశ్యామ॒ధాయ॑సే | వ॒యంతేరు॑ద్రాస్యామ || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>పా॒తంనో᳚రుద్రాపా॒యుభి॑రు॒తత్రా᳚యేథాంసుత్రా॒త్రా | తు॒ర్యామ॒దస్యూం᳚త॒నూభిః॑ || 3 || </td>
+<td class='VargaStyle2'>పా॒తంనో᳚రుద్రాపా॒యుభి॑రు॒తత్రా᳚యేథాంసుత్రా॒త్రా | తు॒ర్యామ॒దస్యూ᳚న్‌త॒నూభిః॑ || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>మాకస్యా᳚ద్భుతక్రతూయ॒క్షంభు॑జేమాత॒నూభిః॑ | మాశేష॑సా॒మాతన॑సా || 4 || </td>
@@ -1793,40 +1793,40 @@
 <td class='SuktaLabel'>[65] యదద్యస్థఇతి దశర్చస్యసూతస్యాత్రేయః పౌరోశ్వినావనుష్టుప్ |<span class='MantraNumbering'>{అష్టక:4, అధ్యాయ:4}{మండల:5, సూక్త:73}{అనువాక:6, సూక్త:1}</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>యద॒ద్యస్థఃప॑రా॒వతి॒యద᳚ర్వా॒వత్య॑శ్వినా | యద్వా᳚పు॒రూపు॑రుభుజా॒యదం॒తరి॑క్ష॒ఆగ॑తం || 1 || <span class='MantraNumbering'>వర్గ:11</span></td>
+<td class='VargaStyle1'>యద॒ద్యస్థఃప॑రా॒వతి॒యద᳚ర్వా॒వత్య॑శ్వినా | యద్‌వా᳚పు॒రూపు॑రుభుజా॒యదం॒తరి॑క్ష॒ఆగ॑తం || 1 || <span class='MantraNumbering'>వర్గ:11</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ఇ॒హత్యాపు॑రు॒భూత॑మాపు॒రూదంసాం᳚సి॒బిభ్ర॑తా | వ॒ర॒స్యాయా॒మ్యధ్రి॑గూహు॒వేతు॒విష్ట॑మాభు॒జే || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ఈ॒ర్మాన్యద్వపు॑షే॒వపు॑శ్చ॒క్రంరథ॑స్యయేమథుః | పర్య॒న్యానాహు॑షాయు॒గామ॒హ్నారజాం᳚సిదీయథః || 3 || </td>
+<td class='VargaStyle1'>ఈ॒ర్మాన్యద్‌వపు॑షే॒వపు॑శ్చ॒క్రంరథ॑స్యయేమథుః | పర్య॒న్యానాహు॑షాయు॒గామ॒హ్నారజాం᳚సిదీయథః || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>తదూ॒షువా᳚మే॒నాకృ॒తంవిశ్వా॒యద్వా॒మను॒ష్టవే᳚ | నానా᳚జా॒తావ॑రే॒పసా॒సమ॒స్మేబంధు॒మేయ॑థుః || 4 || </td>
+<td class='VargaStyle1'>తదూ॒షువా᳚మే॒నాకృ॒తంవిశ్వా॒యద్‌వా॒మను॒ష్టవే᳚ | నానా᳚జా॒తావ॑రే॒పసా॒సమ॒స్మేబంధు॒మేయ॑థుః || 4 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ఆయద్వాం᳚సూ॒ర్యారథం॒తిష్ఠ॑ద్రఘు॒ష్యదం॒సదా᳚ | పరి॑వామరు॒షావయో᳚ఘృ॒ణావ॑రంతఆ॒తపః॑ || 5 || </td>
+<td class='VargaStyle1'>ఆయద్‌వాం᳚సూ॒ర్యారథం॒తిష్ఠ॑ద్‌రఘు॒ష్యదం॒సదా᳚ | పరి॑వామరు॒షావయో᳚ఘృ॒ణావ॑రంతఆ॒తపః॑ || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>యు॒వోరత్రి॑శ్చికేతతి॒నరా᳚సు॒మ్నేన॒చేత॑సా | ఘ॒ర్మంయద్వా᳚మరే॒పసం॒నాస॑త్యా॒స్నాభు॑ర॒ణ్యతి॑ || 6 || <span class='MantraNumbering'>వర్గ:12</span></td>
+<td class='VargaStyle2'>యు॒వోరత్రి॑శ్చికేతతి॒నరా᳚సు॒మ్నేన॒చేత॑సా | ఘ॒ర్మంయద్‌వా᳚మరే॒పసం॒నాస॑త్యా॒స్నాభు॑ర॒ణ్యతి॑ || 6 || <span class='MantraNumbering'>వర్గ:12</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ఉ॒గ్రోవాం᳚కకు॒హోయ॒యిఃశృ॒ణ్వేయామే᳚షుసంత॒నిః | యద్వాం॒దంసో᳚భిరశ్వి॒నాత్రి᳚ర్నరావ॒వర్త॑తి || 7 || </td>
+<td class='VargaStyle2'>ఉ॒గ్రోవాం᳚కకు॒హోయ॒యిఃశృ॒ణ్వేయామే᳚షుసంత॒నిః | యద్‌వాం॒దంసో᳚భిరశ్వి॒నాఽత్రి᳚ర్నరావ॒వర్త॑తి || 7 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>మధ్వ॑ఊ॒షుమ॑ధూయువా॒రుద్రా॒సిష॑క్తిపి॒ప్యుషీ᳚ | యత్స॑ము॒ద్రాతి॒పర్ష॑థఃప॒క్వాఃపృక్షో᳚భరంతవాం || 8 || </td>
+<td class='VargaStyle2'>మధ్వ॑ఊ॒షుమ॑ధూయువా॒రుద్రా॒సిష॑క్తిపి॒ప్యుషీ᳚ | యత్‌స॑ము॒ద్రాతి॒పర్ష॑థఃప॒క్వాఃపృక్షో᳚భరంతవాం || 8 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>స॒త్యమిద్వా,ఉ॑అశ్వినాయు॒వామా᳚హుర్మయో॒భువా᳚ | తాయామ᳚న్యామ॒హూత॑మా॒యామ॒న్నామృ॑ళ॒యత్త॑మా || 9 || </td>
+<td class='VargaStyle2'>స॒త్యమిద్‌వా,ఉ॑అశ్వినాయు॒వామా᳚హుర్మయో॒భువా᳚ | తాయామ᳚న్‌యామ॒హూత॑మా॒యామ॒న్నామృ॑ళ॒యత్త॑మా || 9 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ఇ॒మాబ్రహ్మా᳚ణి॒వర్ధ॑నా॒శ్విభ్యాం᳚సంతు॒శంత॑మా | యాతక్షా᳚మ॒రథాఀ᳚,ఇ॒వావో᳚చామబృ॒హన్నమః॑ || 10 || </td>
+<td class='VargaStyle2'>ఇ॒మాబ్రహ్మా᳚ణి॒వర్ధ॑నా॒ఽశ్విభ్యాం᳚సంతు॒శంత॑మా | యాతక్షా᳚మ॒రథాఀ᳚,ఇ॒వాఽవో᳚చామబృ॒హన్నమః॑ || 10 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[66] కూష్ఠోదేవావితి దశర్చస్య సూక్తస్యాత్రేయః పౌరోశ్వినావనుష్టుప్ |<span class='MantraNumbering'>{అష్టక:4, అధ్యాయ:4}{మండల:5, సూక్త:74}{అనువాక:6, సూక్త:2}</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>కూష్ఠో᳚దేవావశ్వినా॒ద్యాది॒వోమ॑నావసూ | తచ్ఛ్ర॑వథోవృషణ్వసూ॒,అత్రి᳚ర్వా॒మావి॑వాసతి || 1 || <span class='MantraNumbering'>వర్గ:13</span></td>
+<td class='VargaStyle1'>కూష్ఠో᳚దేవావశ్వినా॒ఽద్యాది॒వోమ॑నావసూ | తచ్ఛ్ర॑వథోవృషణ్వసూ॒,అత్రి᳚ర్వా॒మావి॑వాసతి || 1 || <span class='MantraNumbering'>వర్గ:13</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>కుహ॒త్యాకుహ॒నుశ్రు॒తాది॒విదే॒వానాస॑త్యా | కస్మి॒న్నాయ॑తథో॒జనే॒కోవాం᳚న॒దీనాం॒సచా᳚ || 2 || </td>
@@ -1850,7 +1850,7 @@
 <td class='VargaStyle2'>ఆవాం॒రథో॒రథా᳚నాం॒యేష్ఠో᳚యాత్వశ్వినా | పు॒రూచి॑దస్మ॒యుస్తి॒రఆం᳚గూ॒షోమర్త్యే॒ష్వా || 8 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>శమూ॒షువాం᳚మధూయువా॒స్మాక॑మస్తుచర్కృ॒తిః | అ॒ర్వా॒చీ॒నావి॑చేతసా॒విభిః॑శ్యే॒నేవ॑దీయతం || 9 || </td>
+<td class='VargaStyle2'>శమూ॒షువాం᳚మధూయువా॒ఽస్మాక॑మస్తుచర్కృ॒తిః | అ॒ర్వా॒చీ॒నావి॑చేతసా॒విభిః॑శ్యే॒నేవ॑దీయతం || 9 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>అశ్వి॑నా॒యద్ధ॒కర్హి॑చిచ్ఛుశ్రూ॒యాత॑మి॒మంహవం᳚ | వస్వీ᳚రూ॒షువాం॒భుజః॑పృం॒చంతి॒సువాం॒పృచః॑ || 10 || </td>
@@ -1889,16 +1889,16 @@
 <td class='SuktaLabel'>[68] ఆభాత్యగ్నిరితి పంచర్చస్య సూక్తస్య భౌమోత్రిరశ్వినౌత్రిష్టుప్ |<span class='MantraNumbering'>{అష్టక:4, అధ్యాయ:4}{మండల:5, సూక్త:76}{అనువాక:6, సూక్త:4}</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ఆభా᳚త్య॒గ్నిరు॒షసా॒మనీ᳚క॒ముద్విప్రా᳚ణాందేవ॒యావాచో᳚,అస్థుః |<p>అ॒ర్వాంచా᳚నూ॒నంర॑థ్యే॒హయా᳚తంపీపి॒వాంస॑మశ్వినాఘ॒ర్మమచ్ఛ॑ || 1 || <span class='MantraNumbering'>వర్గ:17</span></td>
+<td class='VargaStyle1'>ఆభా᳚త్య॒గ్నిరు॒షసా॒మనీ᳚క॒ముద్‌విప్రా᳚ణాందేవ॒యావాచో᳚,అస్థుః |<p>అ॒ర్వాంచా᳚నూ॒నంర॑థ్యే॒హయా᳚తంపీపి॒వాంస॑మశ్వినాఘ॒ర్మమచ్ఛ॑ || 1 || <span class='MantraNumbering'>వర్గ:17</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>నసం᳚స్కృ॒తంప్రమి॑మీతో॒గమి॒ష్ఠాంతి॑నూ॒నమ॒శ్వినోప॑స్తుతే॒హ |<p>దివా᳚భిపి॒త్వేఽవ॒సాగ॑మిష్ఠా॒ప్రత్యవ॑ర్తిందా॒శుషే॒శంభ॑విష్ఠా || 2 || </td>
+<td class='VargaStyle1'>నసం᳚స్కృ॒తంప్రమి॑మీతో॒గమి॒ష్ఠాఽన్తి॑నూ॒నమ॒శ్వినోప॑స్తుతే॒హ |<p>దివా᳚భిపి॒త్వేఽవ॒సాగ॑మిష్ఠా॒ప్రత్యవ॑ర్తిందా॒శుషే॒శంభ॑విష్ఠా || 2 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ఉ॒తాయా᳚తంసంగ॒వేప్రా॒తరహ్నో᳚మ॒ధ్యంది॑న॒ఉది॑తా॒సూర్య॑స్య |<p>దివా॒నక్త॒మవ॑సా॒శంత॑మేన॒నేదానీం᳚పీ॒తిర॒శ్వినాత॑తాన || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ఇ॒దంహివాం᳚ప్ర॒దివి॒స్థాన॒మోక॑ఇ॒మేగృ॒హా,అ॑శ్వినే॒దందు॑రో॒ణం |<p>ఆనో᳚ది॒వోబృ॑హ॒తఃపర్వ॑తా॒దాద్భ్యోయా᳚త॒మిష॒మూర్జం॒వహం᳚తా || 4 || </td>
+<td class='VargaStyle1'>ఇ॒దంహివాం᳚ప్ర॒దివి॒స్థాన॒మోక॑ఇ॒మేగృ॒హా,అ॑శ్వినే॒దందు॑రో॒ణం |<p>ఆనో᳚ది॒వోబృ॑హ॒తఃపర్వ॑తా॒దాఽద్భ్యోయా᳚త॒మిష॒మూర్జం॒వహం᳚తా || 4 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>సమ॒శ్వినో॒రవ॑సా॒నూత॑నేనమయో॒భువా᳚సు॒ప్రణీ᳚తీగమేమ |<p>ఆనో᳚ర॒యింవ॑హత॒మోతవీ॒రానావిశ్వా᳚న్యమృతా॒సౌభ॑గాని || 5 || </td>
@@ -1910,13 +1910,13 @@
 <td class='VargaStyle2'>ప్రా॒త॒ర్యావా᳚ణాప్రథ॒మాయ॑జధ్వంపు॒రాగృధ్రా॒దర॑రుషఃపిబాతః |<p>ప్రా॒తర్హియ॒జ్ఞమ॒శ్వినా᳚ద॒ధాతే॒ప్రశం᳚సంతిక॒వయః॑పూర్వ॒భాజః॑ || 1 || <span class='MantraNumbering'>వర్గ:18</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ప్రా॒తర్య॑జధ్వమ॒శ్వినా᳚హినోత॒నసా॒యమ॑స్తిదేవ॒యా,అజు॑ష్టం |<p>ఉ॒తాన్యో,అ॒స్మద్య॑జతే॒విచావః॒పూర్వః॑పూర్వో॒యజ॑మానో॒వనీ᳚యాన్ || 2 || </td>
+<td class='VargaStyle2'>ప్రా॒తర్య॑జధ్వమ॒శ్వినా᳚హినోత॒నసా॒యమ॑స్తిదేవ॒యా,అజు॑ష్టం |<p>ఉ॒తాన్యో,అ॒స్మద్‌య॑జతే॒విచావః॒పూర్వః॑పూర్వో॒యజ॑మానో॒వనీ᳚యాన్ || 2 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>హిర᳚ణ్యత్వ॒ఙ్మధు॑వర్ణోఘృ॒తస్నుః॒పృక్షో॒వహ॒న్నారథో᳚వర్తతేవాం |<p>మనో᳚జవా,అశ్వినా॒వాత॑రంహా॒యేనా᳚తియా॒థోదు॑రి॒తాని॒విశ్వా᳚ || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>యోభూయి॑ష్ఠం॒నాస॑త్యాభ్యాంవి॒వేష॒చని॑ష్ఠంపి॒త్వోరర॑తేవిభా॒గే |<p>సతో॒కమ॑స్యపీపర॒చ్ఛమీ᳚భి॒రనూ᳚ర్ధ్వభాసః॒సద॒మిత్తు॑తుర్యాత్ || 4 || </td>
+<td class='VargaStyle2'>యోభూయి॑ష్ఠం॒నాస॑త్యాభ్యాంవి॒వేష॒చని॑ష్ఠంపి॒త్వోరర॑తేవిభా॒గే |<p>సతో॒కమ॑స్యపీపర॒చ్ఛమీ᳚భి॒రనూ᳚ర్ధ్వభాసః॒సద॒మిత్‌తు॑తుర్యాత్ || 4 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>సమ॒శ్వినో॒రవ॑సా॒నూత॑నేనమయో॒భువా᳚సు॒ప్రణీ᳚తీగమేమ |<p>ఆనో᳚ర॒యింవ॑హత॒మోతవీ॒రానావిశ్వా᳚న్యమృతా॒సౌభ॑గాని || 5 || </td>
@@ -1934,7 +1934,7 @@
 <td class='VargaStyle1'>అశ్వి॑నావాజినీవసూజు॒షేథాం᳚య॒జ్ఞమి॒ష్టయే᳚ | హం॒సావి॑వపతత॒మాసు॒తాఀ,ఉప॑ || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>అత్రి॒ర్యద్వా᳚మవ॒రోహ᳚న్నృ॒బీస॒మజో᳚హవీ॒న్నాధ॑మానేవ॒యోషా᳚ |<p>శ్యే॒నస్య॑చి॒జ్జవ॑సా॒నూత॑నే॒నాగ॑చ్ఛతమశ్వినా॒శంత॑మేన || 4 || </td>
+<td class='VargaStyle1'>అత్రి॒ర్యద్‌వా᳚మవ॒రోహ᳚న్నృ॒బీస॒మజో᳚హవీ॒న్నాధ॑మానేవ॒యోషా᳚ |<p>శ్యే॒నస్య॑చి॒జ్జవ॑సా॒నూత॑నే॒నాఽఽగ॑చ్ఛతమశ్వినా॒శంత॑మేన || 4 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>విజి॑హీష్వవనస్పతే॒యోనిః॒సూష్యం᳚త్యా,ఇవ | శ్రు॒తంమే᳚,అశ్వినా॒హవం᳚స॒ప్తవ॑ధ్రించముంచతం || 5 || <span class='MantraNumbering'>వర్గ:20</span></td>
